--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,34 +1,39 @@
 ---
-title: FDA警示：辉瑞的新冠病毒抗病毒药与许多常用药物联用时，会引起危及生命的反应
+title: MILES GUO歌声 CASSANDRA预言
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1813199/)
+`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/1813223/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/48D3633D-4ED8-4F2E-8628-BDB317D06625_w1023_r1_s16.jpg)图片来源：大纪元
-根据美国食品和药物管理局(FDA)的说法，辉瑞(Pfizer)开发的用于治疗新冠病毒的抗病毒口服药物与包括一些抗凝剂、一些抗抑郁药和一些降胆固醇他汀类药物在内的常见药物一起使用时，可能会导致严重或危及生命的影响。
+作者：香草山福音部-能登山神
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/IMG_0284.jpg)
 
-FDA不推荐辉瑞制造的帕克斯洛维德(Paxlovid)用于患有严重肾脏或肝脏疾病的人。FDA于12月22日授予辉瑞帕克斯洛维德 (Paxlovid) 的新冠病毒治疗药紧急使用授权(EUA)，用于治疗12岁以上患者的轻度至中度新冠病毒病例。
+如果艺术家诅咒某种东西它必然灭亡，Cassandra意思是说，如果不相信他的预言，人就是在自取灭亡。 艺术是人对自我的叙事。是为提供人对生活的感知方式服务的。是容纳对生活的理解与想象的对象。
 
-帕克斯洛维德(Paxlovid)是FDA授权治疗新冠病毒的同类口服药物中的第一种，目的是在患者因感染而病重之前减少住院的需要。帕特里齐亚·卡瓦佐尼（Patrizia Cavazzoni）表示：“随着新变种的出现，这项授权提供了一种在大流行的关键时刻对抗新冠病毒的新工具，并有望使抗病毒治疗更容易被进展为严重新冠病毒的高风险患者所接受。”卡瓦佐尼是FDA药物评价和研究中心主任。
+人本主义的艺术价值观认为，如果一定要言说艺术的目的，那就是也只能是人。是人的意志与信念。从某种意义上说，艺术中其实只有两种艺术，一种是人性的善良艺术，另一种是反人性的邪恶艺术。 
 
-帕克斯洛维德(Paxlovid)由两种药物的混合物组成，第一种是尼马瑞韦，可阻止SARS-CoV-2病毒的复制，而第二种成分则用于延长尼马瑞韦的持续时间。
+摇滚歌王郭文贵先生的歌之所以被全球传播，是因为很好的表达某种心情或某种境况之下所易于相信的东西。单纯的快乐或者忧伤并不是艺术思考的指向。只有对“普遍事物的沉浸”才有可能产生艺术的表达。艺术的价值诞生并再生于精神深处。
 
-去年12月初，辉瑞宣布，在出现症状后不久服用该药丸，可使因中共病毒而住院或死亡的风险降低89%。辉瑞(Pfizer)首席执行官艾伯乐（Albert Bourla） 于12月8日告诉CNBC，该药丸已运抵美国，“因此，如果获得批准，该产品将在本月上市。”
+如果CCP不停的在全世界投放病毒，人类的不幸随时降临，而我们的幸福却需要对现实的无视才能获得。这种幸福一定就会需要一种能够轻视甚至蔑视“感官生活”的能力。从这意义上说，那些被洗成脑残的粉红热衷于在“普遍世界”中寻求“另一种”幸福的人，在现实意义上往往是不幸的。
 
-**简评：**中共国制造并释放了病毒，以辉瑞制药公司为首的各疫苗公司借新冠病毒的大流行强推新冠毒疫苗，赚得盆满钵满。辉瑞制药预计其新冠疫苗将在今年为其带来360亿美元的巨额收入。现在，辉瑞制药又开始在与新冠病毒相关的治疗药物上下文章了。FDA等相关监管机构完全沦为了这些制药巨头的打工仔，放着疗效已经得到证实的伊维菌素，羟氯喹等治疗药物视而不见，对一些明显具有毒性和应用缺陷的新特药开绿灯，让全球的医疗机构都沦为了少数集团赚钱的工具。
+ 时间是主观的。即便这个到来的新年。它存在于不幸者、期望者或回忆者的精神之中。没有所谓过去，现在与未来。过去与回忆相连，未来与期望相关。而回忆与期望都是“现在的事实”。存在的只有现实。只有过去的现在，现在的现在以及未来的现在。人类面临的现在就是病毒后灾难，我们没有选择，必须站出来面对现在反击邪恶。 
 
-新闻链接：[https://www.theepochtimes.com/covid-antiviral-pills-cause-life-threatening-reactions-when-used-with-many-common-meds-fda\_4186839.html](https://www.theepochtimes.com/covid-antiviral-pills-cause-life-threatening-reactions-when-used-with-many-common-meds-fda_4186839.html)
+因为冬天的萧瑟，所以憧憬春暖花开。因为未来已来，所以不愿放弃。
 
-* * *
+回忆与预言都是对理想的呼吁与想象。它根植于我们不愿放弃的价值与信念，即新中国联邦之正道主义唯真不破及善良真诚勇敢之精神！
 
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+ 这是Miles guo的呐喊！ 这是Akdia的笛声！ 这是Cassandra的预言！ 这是爆料革命战友们唤醒善良人的使命！ 这是新中国联邦人拯救人类走向正道主义的希望之光！
 
+![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%B8%80%E6%9C%88%E5%B0%8F%E5%9B%BE-1.jpg)
 
-编辑：【英国伦敦喜庄园编辑部】
+编辑/校正/发稿：Daxia
 
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
-
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
