--- a/gnews/41.md
+++ b/gnews/41.md
@@ -1,39 +1,31 @@
 ---
-title: 刘亚洲被抓是以共灭共战役中的一个里程碑！
+title: 共产党操控过的美国政治
 ---
-`纽约香草山MOS01` [轉載自GNews](https://gnews.org/zh-hans/1811863/)
+`骄子` [轉載自GNews](https://gnews.org/zh-hans/1811904/)
 
-作者：香草山信息部 6zero4
-![](https://assets.gnews.org/wp-content/uploads/2021/12/GTV-Gnews-4.png)
-郭先生在最近的大直播里谈到，中共元老李先念女婿、空军上将刘亚洲前不久被抓事件在党内持续发酵，其同时被抓的亲人就有四十几个，现在又抓了几百个，空军老部下也抓了400多人，并涉及其军方老上级、现任军委副主席许其亮。
+文：银河勇气星｜骄子
+![](https://assets.gnews.org/wp-content/uploads/2022/01/AP_16327701075671.jpg)川普 / 图源：网路
+川普时代，中国人对川普的喜欢超过了美国本地人，不仅仅是在美华裔，就连在中共这样有防火墙的国家里，都没有阻挡川普接收到成倍成倍的喜欢。尤其在中文社交互联网上，川普更是妥妥的超级网红。美国现在有投票权的华裔不仅从数量上还是对自由民主的追求上，都迫切值得关注，不然秦刚这样的人不会专门来找他们。拥有投票权的华裔首先是在美国生活了有些年头的人了，再加上2017年文贵先生的爆料革命，几乎就是号召到了一大批有能力并且有信仰的美籍华裔，毕竟他们从中共国逃出来的目的很单纯，就是脱离共产党，觉得那不是正常人应该呆的地方。而川普为什么会受到如此众多的华裔喜欢，最主要一点就是因为他反共，以及对共产党的各种强硬态度，起码从白宫这里开始扭转世界对共产党的看法。只是这些华裔就算跑出来了还是要受到共产党的控制，秦刚试图让这些人的投票权重归共产党，换句话说，共产党就是在操控美国政治。毕竟美籍华裔，是入籍美国的，他们入籍的时候都宣誓过，要誓死效忠美国，维护美国的法治。共产党不但在中国大陆对本地老百姓进行控制，更加在全世界各地对华裔进行控制。私生子那些手段尚且是一用百用，控制正常美国公民的投票权更是无下限的。
 
-刘亚洲不是一般的中共党员，此人是有脑子的共产党员，不仅有女婿帮的傲慢，还见多识广，当然他也不是什么好人，只是坏人中有见解的一个人。刘亚洲有很多经典谈话，其中谈到中国人的三大邪恶：第一，中国人天下没有不吃的东西，而且绝对是天下最邪恶的吃法，这对大自然生态链的毁坏无法想象：第二，中国永远由一帮傻子、骗子、暴徒当官，永远被最坏、最笨的人统治，这是中国人的悲哀；第三，中国人没有信仰到了不可理喻的地步，对“文明”两字完全没有概念，中国人不但没有创造文明，简直是在扼杀文明。刘亚洲被抓进去后就这三个问题的来源被一问再问，被问到奔溃要自杀！
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Capture26-1.jpg)
-刘亚洲在习上台时与另一位太子党出身的上将、前中共国家主席刘少奇的儿子刘源都是挺习的两员军方干将，冒着全家生命财产危险鼎立助习根除军方异己，即时任军委副主席徐才厚和郭伯雄、总参谋长房峰辉、整个总后勤部领导班子等超重量级实权人物。习当时答应刘亚洲最起码将被提升为国防部长，很可能任总后勤部长，甚至进入权力取代了政治局常委的国安委，但习最后彻底食言。
+爆料革命永远不会掺合他国政治，政治真得太肮脏了。然而搞政治的那些人，无论是总统还是议员，他们首先得是个人，优秀的政治家能够扭转危机，并不是在歌颂，只是因为他处的位置，能够让民众有信服的余地，毕竟在民主国家，这些人都是投票选上去的。一切具有政治因素的事件，总会让人恶心，这些政治家还以为自己的小伎俩不会被识破，都藏在西装和油头的粉饰之下，可这世上有几人是真瞎子？说白了，你先是个人，然后才是个从政的人，是人就有和所有人性一样的需求，家庭孩子钱享受，样样都没差，凭啥要从政治上来勾兑得到？美国人拥有自由民主，但是美国政治照样肮脏不堪，和共产党勾兑是底层美国议员一步一步往上走的阶梯，越和共产党走的近就越会爬得高。美国的某议员就是一个鲜活生动的例子，一开始非常强烈的反共，然而呢，到了关键时候就替共产党说话了。这些美国人和那些逃离中共国的华裔，从本质上来说，都是共产党一手操办的棋子，议员反共的因素被入选从政，反共是有追求的华裔唯一想要得到的，那好了，这事儿就完全被共产党捏在手里，能有什么真相呢？
 
-曾经拍习的马屁以图个好职务的刘亚洲最后啥羹也没分到，因此转向跟随曾庆红、王岐山和孟建柱，这应该是习对其下手的原因之一。同时，才疏学浅、打着“包青天”旗子反腐将自己推上“包子帝”皇位的习，认为有见解有才华的党内高层人士对自己的帝位构成了巨大威胁，因此习一直耿耿于怀并不断根除这些威胁。可见中共一向卸磨杀驴、用完即弃的邪恶本质。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/huangyi.jpg)
 
-刘亚洲被抓前见了至少100人，倒数第二人是太子党大哥曾庆红，最后一人是女婿帮老大王岐山，这两人现在都对刘亚洲被抓事件毫不回避、誓死相保，说党内专门有绝对不抓党的创始股东及其家人的规矩，且刘亚洲这事在党内、国内、国际影响巨大。习回复说刘亚洲是女婿，当时规矩定的是直系亲属，不含女婿。王岐山说：“不，我就是女婿，岳父姚依林说王岐山同志是被党内保护的人”。自己的左膀右臂董宏、任志强、康典、陈峰等被抓都不出面说话的王岐山以女婿说女婿，力保刘亚洲的事情非同小可，这会是反习派从地下游击战转入地面阵地战的开始吗？
+政治为什么能够到了这样肮脏的地步。民主政治何以堕落到了如此地步？大家不都是人嘛，感觉这些肮脏政治家都开始脱离人类成为其他品类了。原因只有一个，处在其位，不司其职，不配其位。更深一点的原因就是共产党把这些职位的人全部都蓝金黄了，只能更脏，所有的政治都变得和共产主义的政策一样，撒谎，手底下交易，出卖大多数人的利益，编织一些无法实现的乌托邦梦，全球开始迈向共产党的超级奴隶集中营。政客们习惯了肮脏，政治里充满了黑手交易。最受苦的永远都是老百姓，可是老百姓当初给这些政客投票的时候，有哪些人是被迫的，有人去问吗？问了有结果吗？老百姓合理游行到底有没有用？
 
-这场闹剧本质上是中共内斗白热化的升级版，是习全速倒车搞毛贼东清除党内异己那一套的翻版。只是没有毛的份量与水平的习，其手段太过明显和粗糙，让党内不但异己分子，连稍显温和的共青团派系甚至同根同祖的太子党派系，都认识到了习是要消灭除习家以外的任何势力，以安心做终身皇帝，讲“党天下”变成“习天下”吃独食的本质问题。当下中共党内习家与外人之间已不是利益之争，而是生死之战！后续双方的厮杀必将更加血雨腥风、天昏地暗，以共灭共到了天时、地利、人和的关键节点！
+去年美国1月6号的国会山暴徒事件，是美国大选中永远无法绕过的。还有几天就距离国会山暴徒事件快一年了，一年了，美国程序依然在为这件事声讨。这事儿要是放在中共国，也许当天这些人就会被抓起来全关进去，不用审判，直接击毙。多米尼机选总统拜登，在民众的质疑声中做了总统。就依然做了总统，因为这是程序。国会山的暴徒发生了流血事件，是因为不满意这个机选结局。视频画面里我们看到的是那些长得像塔利班一样的恐怖分子，戴着面纱，还有的嘴里讲着中文，这些都被媒体的镜头记录下来了。而同时在发生暴动的时候，郭先生也在直播中讲述了这些，并提醒战友尽量不要去，怕被利用，且可能会发生有人流血的事件。再然后，就是仅仅根据这件事关于媒体上的报道，注意仅仅是来自媒体的报道，先把班农先生唤去法庭，试图把他打成极右翼分子，然后把当天合理和平支持川普的美籍华裔我们的战友Nicole，打造成郭文贵先生的随从者，就是恐怖分子，暴徒。请再次注意，这件事的记录者，一切法律和法官的判断来源，是媒体。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/11a1b15d14d14abaab83788fcc4106b0.jpeg)国会山事件 / 图源：网路
+文贵先生经常说，自己在法庭上被法官问到说某某媒体报道的关于你的信息，假新闻遍布本来已经不可思议了，现在居然在法庭上还能见到假新闻，还是被作为证据来展示。到底有没有人去核对这些媒体报道的真假？媒体上的一个镜头语言，比如当时暴动记录的那句中文，走了，快走了，那些蒙着面像塔利班一样的恐怖分子，被杨贝贝移花接木栽赃给了美籍华人。共产主义美化乌托邦，利用媒体的全方面操作来达到操控他国政治的目的，这是共产党一直在做的事情，分辨起来也很简单，是否刻意，是否移花接木？
 
-参考来源：[https://gtv.org/video/id=61cc5dbdecc0b216cbb1147d](https://gtv.org/video/id=61cc5dbdecc0b216cbb1147d)
+国会山这件事属于美国内部政治，爆料革命不掺合美国政治。但是共产党想利用这件事对海外中国人带来巨大伤害，并且是他们主动挑起的，杨贝贝的采访就是一种磨刀宣战的架势了。美国能让共产党玩成这样，那是美国的耻辱；中国人能被栽赃陷害成这种程度，更是奇耻大辱；新冠疫苗都扎到人的胳膊上，那是全人类的耻辱。这种满腔耻辱，时时刻刻在等着一颗火苗引燃。记得七哥说过的话，引燃以后赶紧跑开，做那个最后收拾战场的人。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/2c3ff12a-1aad-413c-bcbf-f68f4a054055-2.jpg)
+* * *
 
-编辑/校对/发稿：Hetangyuese
+作者：骄子
+发布：骄子
 
-**更多资讯，更多关注**
-[**纽约香草山农场 GTV–香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场 GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-
-![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-1.png)
-
-
-
+[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)，欢迎加入银河系农场。欢迎各农场兄弟姐妹们坐客串门，欢迎订阅我们的G-TV官方频道[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+![](https://assets.gnews.org/wp-content/uploads/2021/12/345-1.jpg) 
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
