--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,33 +1,37 @@
 ---
-title: 中共华为巨额资助英国顶尖大学 剑桥获利最多
+title: 美国运往中国的液化天然气改运欧洲
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1813600/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1813618/)
 
-**撰稿：日本东京方舟农场 海星**
+**翻译/编辑：守望黎明**
 
-12月30日，一篇发表在《旁观者》周刊上的报导揭露，中共华为公司资助英国多所顶尖大学，金额高达2870万英镑，其中剑桥大学获得最多资金。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/US_LNG11111111.jpeg)**图片来源：Shutterstock.com**
 
-该报导指出，英国下议院国防特别委员会的议员们在去年的一份报告中表示，华为公司与中共有着密切的联系，出于对国家安全的考虑，从2027年起禁止华为参与英国的5G网络。尽管如此，英国多所大学仍坚持与华为公司保持联系。
+据报道，美国的液化天然气现在正在前往英国的路上。据报道，由于欧洲的能源危机日益恶化，原定的目的地是中国的美国液化天然气（LNG）的油轮已经改道，转而驶向英国。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/1-7.jpg)图片来源：盖帝图像
+据《每日电讯报》援引标普全球指数的管理分析师詹姆斯-哈克斯特普（James Huckstepp）的话说，这批货物正在驶过英国的近岸水道，此举对于抑制欧洲液化气的价格走向极端以及供求关系的失衡至关重要。
 
-根据该报导作者Steerpike提出的信息自由申请显示，英国有九所大学从中共华为公司获得巨额资金，包括剑桥大学、牛津大学、皇家艺术学院、伦敦玛丽女王大学、卡迪夫大学、雷丁大学、约克大学、曼彻斯特以及伦敦国王学院，金额高达2870万英镑。其中剑桥大学从2016年开始至今为止获得了2570万英镑的资金，是最大的受益者。
+这位战略分析师说：“我们看到以前运往亚洲的船只现在转运英国，特别是那些来自美国的货源，因为美国到欧洲的航程比到亚洲要短得多。”
 
-该报导披露，剑桥大学在过去五年里向华为收取了31笔研究经费，总价值1830万英镑，即平均每笔59.2万英镑，最大的一笔是2018年2月的290万英镑。自2016年以来，剑桥大学还在三个不同的财政年度从华为公司处收取了740万英镑的资金。
+根据彭博社报道的数字，有20艘装载美国天然气的货船正在前往欧洲，同时另有14艘货轮也定向欧洲，正在等待最终订单的落实。据报道，上周末，前往欧洲港口的美国船只的数量增加了三分之一。
 
-今年6月，由保守党议员组成的中共国研究小组的一份报告发现，近年来，英国有20所重要大学接受了来自中共华为和国有企业超过4000万英镑的资金。
+英国通常通过贯穿北海的管道由挪威和欧洲大陆获取大部分天然气，但也通过船运在全球市场上获得约20%的天然气。
 
-*参考链接：*
+虽然欧洲日益严重的供应紧张和创纪录的高价格吸引了来自世界其他地区的货船，但新来的货船正在拉低价格。
 
-[Revealed: Huawei’s Oxbridge millions](https://www.spectator.co.uk/article/revealed-huawei-s-oxbridge-millions)
+1月交货的荷兰TTF期货合约12月28日下跌1.5%，至每千立方米1,200美元，这是连续第五个交易日的下跌。与此同时，天然气的现货价格上周达到了每千立方米2000美元以上。
 
-* * *
+欧洲近期历史上最严重的能源危机之一是由一系列因素造成的，包括整个欧洲大陆的天然气储存水平降低，以及冬季导致的能源消耗增加。在乌克兰问题上的政治裂痕越来越大的情况下，欧盟国家不愿意从俄罗斯购买更多的天然气，这使情况变得更加糟糕。
 
-*素材采编：海星*
+原文链接：[US diverts LNG supplies away from China](https://www.rt.com/business/544623-us-diverts-lng-supplies-china/)
 
-*编辑：文顺*
+*发布：盘古相聚*
 
-*发布：Ranting*
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
