--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,37 +1,37 @@
 ---
-title: 中共大规模监控西方网络言论 收集情报资源
+title: 有声&#124;中共病毒及疫苗一周伤害信息汇总
 ---
-`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1813369/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1813428/)
 
-**撰稿：日本东京方舟农场 老孙**
+配音：香草山巡管部 – 格格
+![](https://assets.gnews.org/wp-content/uploads/2021/10/image-105.png)
+截止28日，全球除中共国之外累计接种了64.1亿剂中共病毒疫苗，同比上周增长百分之2.23；疫苗接种的增长率较上周的百分之2.88稍有下降，尽管本周全球的确诊病例显著增加，但连续两周全球疫苗接种已趋于稳定。
 
-中央社1月1日援引华盛顿邮报报导，中共正在将对国内网络的监控手段转为对外，深入搜集脸书（Facebook）、推特（Twitter）等西方社群媒体的数据，为政府机构和军警单位提供外国目标的情报。
+中共国内区域性的疫情爆发从未间断。其中，西安市自当地时间23日凌晨起被执行封城措施，疫情形势不容乐观。民众普遍认为，中共西安市卫健委所声称的西安市百分之99.38的接种率是个笑话。而据郭文贵先生援引中共体制内知情者消息称，西安的疫情爆发并非由于中共蓄意投毒，而是由于高疫苗接种率所造成的突破性感染，完全是疫苗接种所造成的灾难。
 
-报导指出，中共过去10年使用舆情分析软件，大范围监控国内网友和媒体的政治敏感言论，而该报从阅读300多份从中共政府公开招标平台公开的招标文件、合同和公司档案发现，中共开始把这套监控手段用在海外国家，从推特（Twitter）、脸书（Facebook）和其他西方社交媒体平台搜集情报。
+美国方面，上周全美中共病毒感染新增病例的七日平均值已经突破28万，达到自去年一月以来的最高值——“奥米克戎”毒株的高传染率可见一斑。值得注意的是，中共病毒疫苗的大面积接种显然没有阻止疫情的迅速扩散。
 
-华盛顿邮报通过中共政府公开招标平台获取的文件显示，包括中国官媒、宣传部门、警察、军方和网络监管机构等，都在采购更新或更精密的软件系统以搜集数据。如中共喉舌中国日报曾斥资32万美元采购软件，搜集外国记者与学者在推特、脸书上的言论；北京警方也花费21万6000美元采购情报程序，用来分析西方关于香港和台湾的内容；新疆的网络中心则招标，要把在海外取得的维吾尔文内容进行编录。
+此外，英国、法国、葡萄牙、希腊等国家均突破了单日新增病例的记录。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/7b32e2dc-0359-460d-998f-582d0d312f1c.jpg)图片来自于网络
+本周是2021年的最后一周，面对中共病毒新毒株的肆虐，各国的强制疫苗政策仍在继续。德国议会将于2022年新年假期后展开全民强制接种的立法讨论工作。而美国总统拜登则在28日的州长电视会议上承认，联邦政府应对奥米克戎毒株不力，承诺给各州更大的自由应对疫情，同时，他还呼吁各州加大力度推行筛查和接种工作。
 
-根据文件描述，高度订制的程序可以搜集个人社群媒体账号的实时数据，有些可以追踪包括美国选举等议题的广泛趋势。
+文字版原文：[中共病毒及疫苗一周伤害信息汇总](https://gnews.org/zh-hans/1805682/)
 
-招标书还列出明确的采购要求，要挖掘推特、脸书和 YouTube的数据，以取得“知名西方媒体记者”和其他“政治、商业和媒体圈的关键人物”的数据。
+2021年12月21日至28日，除中共国外，全球累计确诊中共病毒六百五十一万余例，同比上周增长了百分之35.6，增长率较上周的百分之9.36显著增加；本周累计死亡四万四千七百三十七例，同比上周下降百分之6.1。
 
-招标书要求程序24小时运行，能标示出目标人物之间的关系，揭露人际派系，衡量人物的“中国倾向”，并建立一个警报系统，自动标记“对中国政府的不实信息和报导”。当系统侦测到“敏感”内容时，就会透过短信、电子邮件与专用计算机显示器等，自动传送警报。
+音频处理：喜山必胜Maverick
+发稿：Fei797
 
-华盛顿邮报阅读文件时还发现，在列出技术规格的投标书中，90% 以上都采购了与中国日报类似的示警系统。两名政府约聘舆情分析师告诉华邮，当系统侦测到“敏感”内容时，就会透过简讯、电子邮件与专用计算机显示器等，自动传送警报。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Screen-Shot-2022-01-01-at-10.17.55-PM.png)
 
-*参考链接：*
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
 
-[華郵：中國蒐集情資 大規模監控西方網路言論](https://www.cna.com.tw/news/aopl/202201010231.aspx)
-
-* * *
-
-*素材采编：老孙*
-
-*编辑：文顺*
-
-*发布：Ranting*
 
  
 
