--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,57 +1,28 @@
 ---
-title: 中共国警告美国将在台湾问题上面临“无法承受的代价”
+title: 音乐洗脑需警醒，重建 随心颂天唱新声，归去
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1813248/)
+`YALUN 亚伦` [轉載自GNews](https://gnews.org/zh-hans/1813295/)
 
-**评论：***中国在国际上用尽各种手法孤立台湾,无论是外交施压或者是文攻武吓，然而历史趋势不可阻挡，台湾的民主越成功，国际的支持就越强。*
+新西兰伊甸农场Gnews组 财经G乐部 亚伦
 
-据《法新社》作者：Angelos Tzortzinis 2021年12月30日报道：
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-45-e1641064513108.png)中共国外交部长王毅警告，华盛顿的干预可能导致危险局势
-图片来源：《法新社》
-**中共国外交部长王毅周四表示，美国将因其对自治岛屿台湾采取的行动而“面临无法承受的代价”，这是北京对这个自由岛屿的最新威胁。**
-
-近年来，中美之间在人权、贸易和技术竞争等问题上的紧张加剧，台湾也成为一个主要爆发点。
-
-中共国声称民主的台湾岛是自己的领土，并誓言如有必要，有一天会用武力夺取它。
-
-尽管大多数国家选择正式承认北京而不是台北，但许多国家仍与台湾保持着密切的非官方联系，中共国对此感到愤怒。
-
-**外交部长王毅周四在接受中共国中央电视台和官方通讯社新华社的采访时警告说，华盛顿的干预可能会导致危险的局面。**
-
-王毅表示，美方违背中美建交时作出的承诺，纵容和鼓励“台独”势力，试图歪曲和空心化一个中国原则。
-
-“这不仅会让台湾陷入极其危险的境地，也会让美国付出难以承受的代价。”
-
-美国本月早些时候邀请台湾参加其民主峰会，这是对中共国的公开奚落。
-
-美国总统乔·拜登上个月称台湾是“独立的”——但他后来澄清并确认美国对台湾的政策没有变化。
-
-根据《台湾关系法案》，美国不承认台湾独立，但承诺帮助台湾自卫。
-
-北京将任何表示台湾“独立”的论述视为挑衅，并反复威胁支持台北自决的国家应当承担后果。
-
-**近几个月来，中共国军方在该岛附近展开了一系列咄咄逼人的海上和空中军事行动，继上个月一群美国国会议员访问台湾后，中共国在台湾海峡附近进行了军事演习。**
-
-近年来，中共国在国际上孤立台湾，并对台湾进行政治打压。
-
-本月早些时候，尼加拉瓜的外交立场转向中共，这让台湾现在全球剩下14个盟友。
-
-文章来源：[https://news.yahoo.com/china-warns-us-face-unbearable-105844330.html](https://news.yahoo.com/china-warns-us-face-unbearable-105844330.html)
-
-翻译/评论：洛杉矶盘古农场– maru
-
-校对：洛杉矶盘古农场 – Mike Li
-
-编辑：洛杉矶盘古农场 – WenXiong
-
-发布：洛杉矶盘古农场 – 子萍
+12月31日和1月1日元旦，郭文贵先生于两日的GTV、Gettr直播中深入解读音乐的重要作用，并指出音乐的本质是自然，但是被独裁专制群体利用成统治人民的精神核武器。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/J2JxGgrIvjuiRt0CJUbw.jpg)图片来源运营号
 
 
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
+音乐英文“Music”一词源于古希腊缪斯“Muses”，缪斯是希腊神话主司艺术与科学的九位古老文艺女神的总称。
 
-[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
+音乐原本是个人的内心世界、信仰，和上天赋予能量的表达，以及歌颂上天、大地美好的愉悦流露。但是在政治家眼中，音乐却是人与人之间最重要的沟通方式，是影响人一生最长远的、最潜移默化的精神核武器。
 
+比如，娶了情人女儿的德国音乐鬼才瓦格纳是世界近代史中最有天赋的音乐家，很早就认识到音乐的魔力，并要求所有的歌剧一定从孩子唱起。他提出如果想赢得战争，就一定要人民穿统一的服装、跳统一的舞蹈、唱统一的歌曲（希特勒统一军服、建筑、艺术的思想来源）。瓦格纳也曾说，虽然我会成功，但是我死后一定下地狱，因为我用音乐“屠杀”了太多无辜的人。最后，瓦格纳反犹太人、反民主自由的思想和富有争议的音乐也间接影响了暴君希特勒，导致希特勒把音乐作为自己的第三力量，强制德国全军听瓦格纳的歌剧。苏联斯大林也是运用音乐蛊惑人心的高手，通过《喀秋莎》、《莫斯科郊外的晚上》、《山楂树》等魔鬼般的歌曲让亿万苏联人甘愿奉献了生命。
+
+善于把握政治与音乐的关系，师从于苏联的中共当然不会例外。从五四运动到中共建国的1949年，中共聪明地垄断了音乐，盛产红歌3920首。但是由于创作能力有限大多只得抄袭，中共国歌是抄的（萧友梅是义勇军曲子的创作者）。来自沂蒙山区的《跟着共产党走》（又名《你是灯塔》）也是抄的，这个歌是抄袭苏联的追悼歌《光荣的牺牲》，所以一度销声匿迹长达29年。
+
+所谓流行音乐，是以个体为单位的音乐。没有流行歌曲的地方就只剩神歌和红歌，只有神歌的地方就会有神棍，只有红歌的地方就会有独裁的流氓。所以，对于音乐、建筑、艺术的表达，只要不是发自内心的都只是复制，失去力量。看来，重建音乐回归本质，势在必行。
+
+\*“查理和他的乐团”，作为德国纳粹宣传机器的一部分，这支“御用”乐团是欧洲摇滚乐的鼻祖。这些人都没有在二战后被审判，而是隐藏在好莱坞背后成为大制片人，得以善终。
+
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/7c050d08-aa3d-47c7-858a-01a7ef4f93ff.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
