--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,27 +1,32 @@
 ---
-title: 最新发布的2021年全球记者被害人数为何未含中共国数字?
+title: 中共驻美大使、披着羊皮的战狼秦刚向美国宣战
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1814230/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1814276/)
 
-撰稿：东京樱花团/待命（文晓）
+![](https://assets.gnews.org/wp-content/uploads/2022/01/新.png)
+撰稿：纽约香草山 信息部 6zero4
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/最新发布的2021年全球记者被害人数为何未含中共国数字.png)（图片源自本文链接）
+在12月29日的大直播中，郭文贵先生透露，几天前在中共内部的国安会议上，大家注意到，中共驻美大使秦刚连基本的国礼都没有得到。同时，美国最近首次向中共表示，秦刚大使的讲话很有问题，如他继续这样下去，美中关系将没有改善的可能。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/3-2.png)
+郭先生谈到，在美国有人问秦刚是否要将战狼外交变战羊外交时，秦刚回答：“我们不是战狼外交，是与狼为伍、与狼共舞！美国才是狼，我们要与狼共舞，奉陪到底。”谈到台湾问题时他说，你美国看看自己的流氓嘴脸，台湾问题的根源在你美国，是你们极少数政客利用台独分子挑起的问题。谈到新疆问题时他明确表示，新疆问题就是美国过去的华人和黑人问题，是汉人被维族人种族大屠杀，而不是维族人被汉人种族大屠杀，我们现在对待维族人就像兄弟姐妹一样友好。秦刚还警告美国，如继续放任班农等极右分子与严重影响中美关系的一小撮人搞在一起，中美两国必有一战。
 
-2022年元日，通过时事通讯社报道得知，法新社报道了发自布鲁塞尔的消息，称国际新闻工作者联合会（IFJ）于2021年12月31日宣布：2021年全世界共有45名记者被杀害。与以前的记录相比，这是“最少的年份之一”。
+郭先生最后评论，秦刚如此荒唐地扭曲事实并血口喷人，完全突破了外交官的底线，他不是来建立和改善两国关系的，而是来羞辱和挑衅美国并向美国宣战的。披着羊皮的秦刚既不是战羊，也不是战狼，而是战魔，将美中关系的敏感神经紧绷到了极限。
 
-声明说，人数减少我们应该高兴，但针对记者的暴力事件仍在继续。所以，这点点减少，对我们来说只是个太小太小的安慰。阿富汗的死亡人数最高，有9人死亡。墨西哥有8人死亡，印度有4人，巴基斯坦有3人。
+新闻链接：[2021年12月29日 文贵大直播](https://gtv.org/video/id=61cc5dbdecc0b216cbb1147d)
 
-按照地区划分的话，20人在亚太地区，包括阿富汗。10人在美洲，8人在非洲，6人在欧洲，1人在中东。还有有两个人死于“严重事故”，最明显的是在伊朗。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Screen-Shot-2022-01-01-at-10.17.55-PM.png)
 
-国际新闻工作者联合会分析说，进行实地报道的记者数量减少了，记者被卷入武装冲突的危险也减少了。但从墨西哥最贫穷的街区到希腊和荷兰的街头，犯罪团伙和贩毒集团的威胁还在继续增长。
+总编/编辑：飞虹
 
-很明显，这个数字中没有包括中共国对记者的残害!国际新闻工作者联合会统计的数字真的是全世界的数字吗?还是根本得不到中共残害记者的数字?或是刻意不把中共残害记者的数字统计进去?
+校正/发稿：浪迹天涯
 
-信息来源：[殺害された世界の記者45人　国際団体、21年集計（時事通信） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/3a072b95c163110c2dc51fd78c3f4de06e0a2a84)
-
-*校对：东京樱花团/知了知了
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/二维码.jpg)
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/新.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
