--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,27 +1,19 @@
 ---
-title: 得罪彭丽媛和宋祖英被曾庆淮摆平的王力宏因曾庆淮被灭
+title: 管理人际关系是你最牛的，是打开成功之门的第一把钥匙
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1814471/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1814574/)
 
-**郭文贵先生：**王力宏这人，王力宏他为啥那样变态你想过没有？你见演员界有多少人不染毒的？有多少人不参赌的？参赌是因为孤独寂寞、金钱的诱惑，还被这些黑道大佬给设置。涉毒的是寂寞孤独，完全是一个各种身体上虚像的一个表征，一个自杀行为。再往后的是，哪个最后的所谓的音乐人、演艺界不倒在金钱前面？
+**郭文贵先生：**刚才你看小飞侠你问我的问题，海量的信息我能处理，我骂王雁平最多的事情就两件事。她这个出口伤人，就是她那个嘴狠到……佛家里边最大的罪就是妄语，妄语中就是嘴伤人，你没办法，她就是……她就天生这个人，她就因为她这个嘴跟刀子一样，你们很多人都见过她，她现在是不可替代的作用。因为我这人永远，我是好人，当好人，当惯了，就说不出坏话了。所以她现在很有用，很有价值，但是对她不是好事。
 
-根据这个结果，我今天告诉你，王力宏当年有一个最重要的事情，王力宏在大陆发展的时候得罪过两个人，这两个人他做梦没想到能决定他的命运。今天就是你们看到的我们的国母彭丽媛，你看看上网查查彭丽媛当时怎么和王力宏有过几个同场演唱？王力宏竟然拒唱过，因为国母；当年宋祖英他都不在乎，都发生过冲突。
+第二个王雁平最大事情什么？说话开会时间太长。如果我在生活中不会管理我的时间，我将一事无成。管理自己成功的几个秘诀，管理自己的人事关系是你人生中第一把剑。你看，喜安娜、喜安迪，她刚才她姐妹两个就在……她妹妹11岁孩子，“是的——”，就是她俩的关系就一个主角，一个配角。你现在她俩调整过来年龄问题不现实。还有一个，她俩她爸她妈给她定好了角色。你看到钟仁，钟仁在短短的就这几个月的钟仁，就刚才能讲出这么精彩的话出来，是吧？中国在过圣诞节时候把圣诞老人给抓了，这话是多有力量这话。
 
-你知道代替国母和宋祖英的是谁呀？你们知道是谁吗？后来是曾庆淮从中摆平，中国当时所有演艺界过去三十年谁说了算？曾庆淮。弄所有的歌星就是弄曾庆淮，就是弄曾庆红。共产党杀富济贫抢你的钱，同时灭掉政敌，这就叫共产党。
+刚才呢，我们的蚂蚁仔的儿子Stephen刚说完“我害羞”，刚才“啪啪啪”就讲说我是最有意义的事，你看看这个人打开心扉以后。Twins在一年前,现在她坐这块的Twins，你看像不像那个印度最牛的那个音乐的那个女巫，最早那个女巫，你看她披着黑色的衣服，长发是吧？“哗”往那一……我当时我到我最喜欢就印度的妖乐、巫乐，我最喜欢的，就是那个印度的“喳——喳——”，然后石头“空空空”啊。然后呢人家那个女巫就像刚才叫Twins一样，穿着黑衣服长袍“咵”在那里，然后发出声音喊出来，哇，那个底气，就觉得她们那个丹田之气就没完没了，实际上是印度唱歌的叫呼吸，呼吸。
 
-曾庆淮会害死无数个明星。王力宏的背后，还有头一段抓起那个小孩叫什么玩意儿？强奸犯那个，都是曾庆淮的公司培养起来的。
+刚才你发现Rica唱歌牛在哪儿了吗？Rica没有呼吸的节气，就没断气。哇Rica厉害啊Rica。你看看Rica了吗？她真的厉害呀。在印度的最高境界就是人家印度唱的歌，不管是现在的，“当当当”，它这个气你就不带缓的。
 
-**佳佳：**吴亦凡。
+你看今天的Twins的音乐已经到了……今天编的歌和她俩的表情，这是绝对的音乐的范儿，音乐的范儿，绝对是音乐的范儿。所以，但是呢，你人与人之间，你看，我过去的一年，小飞侠，你看我管理的多少人事关系，我每一个人我都记得，我每个人的关系我都记得。今天，北极星虽然中文表达不清楚，这让我很不悦悦，你英文竟然比我好，你还不学郭氏英文，这不对的，你要学郭氏英文，要中英文都听得懂不用翻译的英文叫郭氏英文啊。
 
-**郭文贵先生：**对对对，全都是。当时救刘晓庆的时候是老茂和曾庆淮救出来的，曾庆淮就撂一句话，你们都太小了，这话不能说，说完以后喜安娜、喜安迪、钟仁是不行的，少儿不宜，就不能说。
-
-我就在现场，你知道刘晓庆被接出来都成啥了刘晓庆？就专门有一个看刘晓庆的狱警虐待刘晓庆曾经写在海外一个网站叫留园网，在留园网上写，拍的那些照片，不堪入目，狱警就敢这么弄，你把她折腾成啥样？
-
-但是曾庆淮那句话具有典型的意义，王力宏是曾庆淮的人，是吧？现在要曾家所有的曾庆淮的演艺界通通都得灭，台湾的杨登奎黑道来投奔的是曾庆淮，通通都得灭。
-
-网红是谁的事业呀？网红是孟建柱的事业，孙力军控制的，香港台湾黑道后来是孟建柱、孙力军控制的，孟建柱又是江家的人、曾家的人，都得灭。
-
-所以说你们看王力宏的时候，说实在话，王力宏没有任何错的，他哪错了我都不知道，他所有干的事情共产党干的都比他多一万倍，多一百倍都是善良的人了，演艺界没人不（这么）干。
+所以说，你一定要记住，就像今天咱们这些，说实话我都能记得很清楚。打游戏的，是吧，我们的喜安娜家人，你看每个人我都能记住。管理人际关系是你最牛的，打开你成功的门的第一把钥匙。小飞侠你是绝对缺失这堂课的，你不善与人沟通，你不善与人打开心扉。同样的是，别人也不会跟你沟通、打开心扉。
 
 字幕来源：[2021年12月25日文贵大直播圣诞特别节目“爆二代——希望与力量”全文字版（三）](https://gnews.org/zh-hans/1794181/)
 
