--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,17 +1,17 @@
 ---
-title: 邓丽君高胜美王力宏这些港台歌星是富豪玩够了抛到社会
+title: 永远世界上绝大多数人就是身边守着宝，你不知道谁叫宝
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1814460/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1814553/)
 
-**郭文贵先生：**王力宏抢过别人的女人，王力宏欠过人家的钱，王力宏没有兑现黑道的规矩，是吧？王力宏很可怜。王力宏能在咱这个节目上占那么长时间，他真是八辈儿烧了祖香了，他最后一次辉煌。
+**郭文贵先生：**这就是你们这一代孩子要记住，很多事情是要不一样的。如果你今天能告诉我说我记得郭叔uncle Miles，你是我第几个follow者，这个事情就不一样了。你去查去，我是正好你第100个关注者。在100之前，有一个第7个是我另外一个号的关注者，所以我是你的第七号和100号，而且我不是偶然的，就是上去点击，就是这样的。所以我记得很清楚，你去看去。这都是G-TV啊。所以说你看这跟你是有缘分。
 
-当年已经不在世的台湾的小黑，小黑子，就是飞跃黄河那个，对台湾和香港的艺人讲过一句话，说：“香港有多荣耀，香港、台湾过去整个电影事业有多荣耀，这些演员就有多么的可怜和可恨！”
+然后呢，你爹，你爹就跟我的缘分就更深了，是吧。真是就是新西兰，你不知道新西兰有多重要，新西兰对我们有多重要。很多兄弟姐妹们，你们真的，永远世界上绝大多数人就是身边守着宝，你不知道谁叫宝。人类是非常无知的人类，你知道吗？就是上帝不知道怎么设计的人，就是你拥有最美好的时候，你永远不知道是最美好的，你老看着别人的好，别人的老公好，别人的老婆好，别人家的车比自己车好，别人家房子，比自己家房子好。而且身边最对你的应该记的，你没记住，不该记的什么谁骂过你，谁侮辱过你，你都记得门儿清。
 
-徐小凤，像这样的人，像邓丽君这样的人，几乎，像高胜美这样的人，到后来都是很惨的，很惨很惨的，王力宏这些人都会很惨的。所有台湾、香港歌星都是富豪的玩物，没别人要了或玩够了以后再抛到社会上去，返几回手。
+所以这个人类，它是很奇怪的，你知道吗？刚才回答小飞象、小飞侠，你们俩刚才说的话。今天看得出小飞象、小飞侠就在几个月和小王子和佳佳，这个暂时离开大使馆和办公室之后，就精神上的这种锻炼，真的已经完全不是一个人了。
 
-你看这两天我看到好几个香港的老歌星，都跟我很熟，都出来了，为啥？没钱花了。这就是为啥我告诉你，唱歌，当咱们新中国联邦人我们未来啊就要，今天我本来想严肃宣布，但是今天我看到Bunny以后，看到Rica、Twins还有这么多人唱歌以后，我都不敢严肃宣布了，还有喜安娜、喜安妮，我怕严肃完以后这个世界会大乱。
+我说这话，我是不是跟你们发自内心的？你知道我从来不会浪费……就你们的脸部和表情、精神状态，你看我老拿着——黑小王子来开玩笑，但小王子的表情和他的最大的心理状态，他每次都能接招。
 
-就我们永远要记住，我们再也不能成为别人的唱手和别人的演手，都不能。新中国联邦人一定要成立一个巨大的基金，要对你们这些爱好音乐的人永远不为钱而唱。
+你知道这个星球大战里最可怕的是什么你知道吗？就黑势力他能把那个好的势力东西都给你收过来，完了，黑势力赢了。正能量势力是因为爱，因为爱，最后打败都是打败了黑势力，是因为爱打破了黑势力。如果你有两样，我又有爱，我还能吸过……你所有的东西我都能吸过来的话，你就天下赢两次。就共产党的原话说，双赢，双赢是吧？赢两……连赢两次。
 
 字幕来源：[2021年12月25日文贵大直播圣诞特别节目“爆二代——希望与力量”全文字版（三）](https://gnews.org/zh-hans/1794181/)
 
