--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,22 +1,58 @@
 ---
-title: 中共西安宣传翻车，低智商煽情让人跌破眼镜
+title: 永远别从嘴里说出我害羞，不要失礼，永远不要失去自信
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1814450/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1814545/)
 
-*视频&文章：澳洲天好蓝*
-视频来自网络
-12月31日微博大v西安直播放出了一个视频，视频内容显示是中共政府“免费”送物资到某小区。要是你没看过这段视频的话，可能还真认为中共政府这么好心关心人民呢，看过之后你就知道一切都是假的，都是摆拍。
+**郭文贵先生：**真是时代不一样了，我十四岁的时候正在追你七嫂如火如荼的时候，已经驾上摩托车、汽车，我已经是走向江湖吃百家饭，那时候我已经是这样了。
 
-不知道是不是中共没给导演工资开足，导致导演拍出了如此低智商的洗脑宣传片来低级红高级黑。视频里可以看到物资被堆在一个路口，路口边上就是一条畅通无阻的大马路，路上连行车都没有，然而运送物资的车不开到大门口，却偏偏要把物资卸在大约相隔50米远，让人排成人链去一个一个传递物资，这明显一看就是摆拍，这50米的距离物资车完全可以开过来，完全没有必要用人去传递，导演还给出了一系列运镜，很艺术化的展现了整个人链传递物资的每个细节，让本来就低智商的情节更加充斥着廉价剧本感觉。
+但是这个时代让你们，你看看，你旁边的Twins还有钟仁、喜安娜、喜安迪、北极星你们这都是那么小的孩子，实际上在我们成长的年代，你们都是很大的孩子了，在那个时候，我们都已经真是江湖人物了己经，什么都独立了。
 
-一句话，这忒TM假了！当然绝非笔者个人主观看法，对此，微博上看到这个视频的90%多的网友表示这秀做得也太假了，获赞超过10万，另外只有百分之几的五毛和深度被洗脑群众帮中共说话，也就几千个赞，明显可以看出稍微智商正常的人都知道这是中共摆拍的。
+但是由于这个时代的变化，让你们成熟得越来越晚。但是我特别想跟你Stephen说的，“我很害羞”，你没有害羞，你一定要记住，你一定回去把我今天说的话记住，你害羞是什么你知道？你不知道怎么表达，你不知道该怎么说出这个话。
 
-当然这还不是中共最无耻的宣传方式，中共最下作的就是找了一些60，70岁以上的老人来摆拍，让他们把中共送的所谓“免费菜”摆在地上，然后对着镜头下跪磕头，还要说感谢政府感谢党。当然也不能怪这些60，70岁的老人傻，他们大多经过了大饥荒，文革早已经被吓怕了，对政府已经完全屈服，他们认为现在的生活比起以前吃不饱穿不暖简直是天堂。这两种认知加起来，他们就会觉得政府就是”神”，另一方面，中共用一点小钱也能收卖这些老人摆拍。
+实际上你对你的现状和环境的陌生，就像你第一次吃某种水果的时候，你不会一口咬下去是吧？就像菠萝一口咬下去扎你舌头扎你嘴是吧？我第一次吃芒果就拿过来就放嘴里咬，哎哟，扎了我一嘴呀，这个不是这样吃的，扒皮。芒果不是整个吃的，一样，我不知道怎么吃，我就放在嘴里去了，这就是我们北方人不知道南方水果怎么吃一样。
 
-他们不知道的是，中共政府如果真是合法，真是为人民的话，拿出物质救灾不是理所应当的吗？还需要感谢吗？更何况中共从来都不是合法的，是中共靠暴力和杀戮夺取了政权，并以欺骗恐吓统治了中华民族70多年，其中数以亿计百姓惨死在这个凶残的政权手下，如今西安乃至中共国和全球人类所面临的ccp病毒与ccp毒疫苗浩劫也是中共亲自一手写下的剧本！所以没有哪一点需要人民来感谢的！相反人民应该在知道了真相后站起来推翻这个恶魔！
+你不叫害羞，不要随便定义害羞，你不是害羞的，更不能，男人不能有害怕。你现在在这里谁能怎么着你？你告诉我，Stephen，你长什么样、你说什么样、你做什么样的话跟这些人有关系吗？
 
-[【澳喜文章1】](https://gnews.org/zh-hans/author/aujenny/)[【澳喜文章2】](https://gnews.org/zh-hans/author/himalaya-australia/)
-![](https://assets.gnews.org/wp-content/uploads/2022/01/澳喜图标2-1.jpg)
+**Stephen**：没有关系。
+
+**郭文贵先生**：这些人能决定你的未来吗？没有关系，对了。如果说不管你做什么说什么，谁能决定你的命运？只有你自己决定你的命运。所以我从小的时候，我就看任何人，我就想这人能决定我命运吗？他也不能决定我的命运，他未来会比我好吗？他永远不可能比我好，我一定比他好。所以在我心里就充满了一种叫什么？老人说是狂妄，还有再客观地说叫自信，我之中的自信就来了。
+
+今天放眼看来，在旁边这个框里面同心同框的人，谦虚的说你十四岁的优势，我已经输给了你三十六年、三十七年，咱俩不在一个起跑线上了。旁边的喜安娜也输给你好几年呀，钟仁也输你好几年呀，小飞象小飞侠已经输你一条街了是吧？小王子还叫小王子？他从明天起就改叫老王子了，是吧？还叫什么小王子在你面前。Twins跟你也差不多，是吧？
+
+但是你看看，你的未来是无限大、无穷无尽的大。所以说你这样的孩子，一定不要从你嘴里说出来“我害羞”，你可以说我不知道怎么表达，我不知道怎么说怎么讲，不要失礼，但是永远不要失去自己这份自信。世界上最讨厌的孩子就是什么？——失礼，就是你没有礼貌。你看我们的喜安迪、喜安娜姐妹俩礼貌到了最高级别，快跟日本人似的，一句话三鞠躬，非常之礼貌，是吧？
+
+但是呢我们不要失礼的同时不要失去自己的自信，你不是害羞，但你这种真诚是让我感动的，你就刚才上来的时候你很真诚，就这个力量已经是了不得了，基本上你要在一个男女社交当中，见面你就告诉大家“唉哟我害羞”，女孩儿都喜欢你。
+
+小王子这号人脸皮板砖厚，让你“哎，我是小王子啊！我是小王子啊！”这货吹牛的，女孩儿没有安全感，是吧？没有安全、对不对佳佳，我跟你说得对不对？是不是？你看看，你叫佳佳重新选择，一定选择你不选择小王子了，你放心Stephen，所以说你不要害羞，女孩儿都喜欢你这样的小孩儿，坦诚的男孩儿。开玩笑，我老黑小王子，小王子回去扎我的针儿，谢谢，谢谢！
+
+字幕来源：[2021年12月25日文贵大直播圣诞特别节目“爆二代——希望与力量”全文字版（三）](https://gnews.org/zh-hans/1794181/)
+
+编辑整理：喜马拉雅的肉夹馍；
+
+字幕文件制作：小满；
+
+视频制作及上传：Cindy；
+
+G-News发布：小满；
+
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
