--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,42 +1,53 @@
 ---
-title: 日本将协助比尔・盖茨在美国建造实验性核反应堆
+title: 可以相信爱情不要依靠爱情,爱情不如偷情,偷情不如偷不到
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1814438/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1814507/)
 
-#### 【雅典娜快讯】，紧贴时事脉搏
+**郭文贵先生：**特别长的好看的男的，你压根儿就真的是，长得好看的男的真的都不太靠谱，是吧？还有一个真的是，这个男人呐，特别是爱自己的男人你就真的要远离他。第一别找太帅的、别找有钱的、别找有权的、别找有名的、别找自恋的，这是第一条建议；第二条建议，永远记住，女孩儿永远记住，这咋说呢？永远不要相信爱情，这个很残酷，但是它很真实。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Japan-to-assist-Bill-Gates-in-building-experimental-nuclear-reactor.jpg)
+你问问小飞侠、小飞象你俩在一起，小飞象脸要被毁容了，你问小飞侠会守她吗？小飞侠一定会说守你一辈子，那纯粹是胡扯的。梁山伯与祝英台是俩人都死了，他俩要活着那不知道搞多少事出来呢？多少小三、小五的？罗米欧与朱丽叶那是没活到老，活到老不知道离多少婚呐，是吧？那都是已经是在一定的时间内的冲动的结果。
 
+你七哥还为你七嫂子，我那时候都为她死一万回都能死，我那时候我追不到你七嫂我肯定死，我一定会做出来的，是吧？又想挖眼睛，又想断胳膊，我都想过。这是人在那个认知的情况下，他是本能，但是后来你觉的我跟你七嫂子是什么？你觉的是爱情吗？爱情不是这样子的。
 
+爱情首先一点，爱情里面就没有任何其他成份，完全是建立在生理上、精神上一个完美的最高境界，对双方愉悦满足的结果。你说我跟你七嫂子我们俩的成长，俺俩的精神上怎么愉悦去？你告诉我。那你就变成亲情，亲情的愉悦，是吧？就这么简单。
 
-图片来源： dailyenergyinsider.com
+你告诉小飞侠，小飞象说我脸被毁容你守我三年，不可能。就像当初你七嫂子的时候，我说：“我要是被枪毙了你还会爱我吗？”她说：“我会等你。”我说：“那你是愚蠢，赶快嫁人。”我在桥底下断了腿要饭要三年你跟我，要五年你还等我？不可能，你靠啥活下去？”
 
+爱情是有条件的，爱情是幻想，爱情不是事实，所以在这个基础上你去寻偶的时候，为啥我不爱说，喜安娜、喜安迪你还太小，像钟仁这都太小，Twins，是吧？我看看我们北极星也是很小，还有我们新来的Stephen这都是太小，大家都有冲动的时候挺好嘛，冲动冲动嘛，冲动过后是现实，是吧？
 
-#### 编译：小红帽
+你现在你说一个最根本的问题，我现在给你们儿童不宜说的话，就像我每次讲的玉米地的故事。玉米地之所以完美，它没在一起过下去，过下去肯定不完美，我认为只要有时间、只要有条件、只要有物质、有第三方条件在一起的，它都不叫爱情。
 
-根据RT1月1日报道，**两家日本工业巨头正计划与比尔・盖茨的风险投资公司合作，为将在美国怀俄明州建造的一个高科技核反应堆提供技术支援。**
+爱情不如偷情，偷情不如偷不到，哎呀我的妈，我真学会了。当年玉米地大姐说，还有后来遇到所有人都跟我说这话，现在越来越感受到，爱情不如偷情，偷情不如偷不到。你就这么现实，你咋办呢你说？
 
-日本《读卖新闻》周六援引多位知情人士的话报道称，双方预计将在1月签署一项协议，由日本原子能机构（JAEA）和三菱重工提供工业援助和日本自己的先进反应堆的数据。
+所以回答你，佳佳，你们可以继续憧憬、继续幻想，但是别相信爱情，不要依靠爱情，你可以相信，不要依靠。
 
-盖茨建立的核电企业TerraPower计划最早于2028年在怀俄明州开设Natrium工厂，美国当局将提供资金以支付该项目的一半，估计为40亿美元。
+字幕来源：[2021年12月25日文贵大直播圣诞特别节目“爆二代——希望与力量”全文字版（三）](https://gnews.org/zh-hans/1794181/)
 
-一座使用钠作为冷却剂、输出功率为34.5万千瓦的快速反应堆，其建设工程将于2024年开始。
+编辑整理：喜马拉雅的肉夹馍；
 
-盖茨的风险公司最初计划与国有的中国核工业集团合作，但美国前总统唐纳德・特朗普推出的对与北京的核交易的限制迫使该公司放弃这一计划。美国与中国和俄罗斯的竞争由来已久，后者也在酝酿建造和出口先进反应堆的计划。
+字幕文件制作：小满；
 
-日本原子能机构拥有丰富的钠冷快堆运行经验，如福井县的文殊原型快堆和茨城县的常阳实验快堆，将多次向TerraPower提供运行数据和设计。
+视频制作及上传：Cindy；
 
-日本曾在2016年退役其文殊原型先进反应堆的痛苦经历，该项目耗资85亿美元，但收益甚微，而且多年来一直存在争议。文殊设施自成立以来就发生了事故、违反监管规定和掩盖事实。2011年福岛核灾难发生后，该反应堆被关闭。
+G-News发布：小满；
 
-新闻来源：[Japan to assist Bill Gates in building experimental nuclear reactor — RT Business News](https://www.rt.com/business/544950-japan-bill-gates-nuclear-reactor/)
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
 
-***发布：小红帽***
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
 
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
