--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,19 +1,17 @@
 ---
-title: 中共西安宣传翻车，低智商煽情让人跌破眼镜
+title: 唤不醒中共统治下的‘愚民’
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1814450/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1814581/)
 
-*视频&文章：澳洲天好蓝*
-视频来自网络
-12月31日微博大v西安直播放出了一个视频，视频内容显示是中共政府“免费”送物资到某小区。要是你没看过这段视频的话，可能还真认为中共政府这么好心关心人民呢，看过之后你就知道一切都是假的，都是摆拍。
+撰稿：娇气猫
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Untitled-5.png)图片来自网络
+随着2021年底的脚步，新冠疫苗灾难在美国和澳大利亚也创下新高,这并不是2022年好的开始。就在前几天美国感染50多万例,澳大利亚新州一夜新增2万多例，而在中共国我们只看到强权下掩盖的风平浪静，但跟家人和朋友沟通都提到每天频繁都有救护车的声音。
 
-不知道是不是中共没给导演工资开足，导致导演拍出了如此低智商的洗脑宣传片来低级红高级黑。视频里可以看到物资被堆在一个路口，路口边上就是一条畅通无阻的大马路，路上连行车都没有，然而运送物资的车不开到大门口，却偏偏要把物资卸在大约相隔50米远，让人排成人链去一个一个传递物资，这明显一看就是摆拍，这50米的距离物资车完全可以开过来，完全没有必要用人去传递，导演还给出了一系列运镜，很艺术化的展现了整个人链传递物资的每个细节，让本来就低智商的情节更加充斥着廉价剧本感觉。
+2022年的元旦本该是往年一样的欢快的假日气息，但听说很多开着商店及商铺的无奈叹息，疫情经济下的不理想。有一个认识的的长辈说她的俩个60岁左右的亲戚突然走了，当你问是不是打过新冠疫苗，她非常的气愤及敏感, 这样的例子比比皆是，可悲的是都沦为牺牲品，听不得对共匪的一个不字，大多数依然躲在盛颜的伪装下，自娱自乐自逍遥。像抖音里的美颜滤镜，明明知道是假，依旧自欺欺人自得其乐。中共把人民奴役的何事都事不关己高高挂起。疫情之下的封城，不管是武汉还是西安，中共都是趁机压榨你的钱，还有多少人是活活饿死在家。排在前面的人打完新冠疫苗晕倒了，后面排队的依然继续等待。儿童尚问几个为什么, 成年人的世界却没有了问号。可悲的是中国人，只有当灾难走向你的时候才会幡然醒悟，你的发声在中共的辟谣下也会变成了谣言，如此愚弄着一批接一批。如果说不愚昧, 何以人云亦云随波逐流。
 
-一句话，这忒TM假了！当然绝非笔者个人主观看法，对此，微博上看到这个视频的90%多的网友表示这秀做得也太假了，获赞超过10万，另外只有百分之几的五毛和深度被洗脑群众帮中共说话，也就几千个赞，明显可以看出稍微智商正常的人都知道这是中共摆拍的。
+在中共国的统治下，就是因为每个人都缺少了质疑的能力, 万能的朋友圈不能达到我要的警醒，只有留言区讥讽的回复。如果人们多一份思考多一份观察，多一点耐心多一点接受，那就躲过病毒和新冠疫苗下的骗局，不但拯救了你自己也拯救了家人。
 
-当然这还不是中共最无耻的宣传方式，中共最下作的就是找了一些60，70岁以上的老人来摆拍，让他们把中共送的所谓“免费菜”摆在地上，然后对着镜头下跪磕头，还要说感谢政府感谢党。当然也不能怪这些60，70岁的老人傻，他们大多经过了大饥荒，文革早已经被吓怕了，对政府已经完全屈服，他们认为现在的生活比起以前吃不饱穿不暖简直是天堂。这两种认知加起来，他们就会觉得政府就是”神”，另一方面，中共用一点小钱也能收卖这些老人摆拍。
-
-他们不知道的是，中共政府如果真是合法，真是为人民的话，拿出物质救灾不是理所应当的吗？还需要感谢吗？更何况中共从来都不是合法的，是中共靠暴力和杀戮夺取了政权，并以欺骗恐吓统治了中华民族70多年，其中数以亿计百姓惨死在这个凶残的政权手下，如今西安乃至中共国和全球人类所面临的ccp病毒与ccp毒疫苗浩劫也是中共亲自一手写下的剧本！所以没有哪一点需要人民来感谢的！相反人民应该在知道了真相后站起来推翻这个恶魔！
+乌云是无法阻挡曙光，暗夜终究是要过去的，是非曲直大白于天下时，折腾的伤痕累累的人们，不知崩溃的是健康还是心理？ 2022年健康的活着就是赢家。
 
 [【澳喜文章1】](https://gnews.org/zh-hans/author/aujenny/)[【澳喜文章2】](https://gnews.org/zh-hans/author/himalaya-australia/)
 ![](https://assets.gnews.org/wp-content/uploads/2022/01/澳喜图标2-1.jpg)
