--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,43 +1,44 @@
 ---
-title: 日本将协助比尔・盖茨在美国建造实验性核反应堆
+title: 绝招来自“杀手锏”的“反义词”——下篇
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1814438/)
+`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1814562/)
 
-#### 【雅典娜快讯】，紧贴时事脉搏
+撰稿：聖易經聯
+![](https://assets.gnews.org/wp-content/uploads/2022/01/201.jpg)图片制作：澳喜农场©森森
+续上文，我在文中说“反义词”，实际上简言之就是“逆向思维”的意思。所以反义词三个字一直是打引号的。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Japan-to-assist-Bill-Gates-in-building-experimental-nuclear-reactor.jpg)
+一、反用“蓝金黄”：
 
+听文贵先生多次直播，仔细点就不难发现，其中有完全是反着用的蓝金黄的行动方式：
 
+1、爆料革命意在让没权的或远离权力的人有钱；（而这是在中共国的潜规则：必须行贿当权者才有机会获得长期较丰厚的收入）在爆料革命中，新中国联邦人以明着奖励有责任感、正义感的好人，让这些人有钱；在2017年文贵先生刚出来爆料不久，那时捐款法治基金、法治社会的战友并不清楚以后会有投资收益，完全秉着自己的责任和正义而捐款。后来大家都知道他们都因最前沿而获得了最优惠的投资资格（比如有非常合适的喜币福利币配额等）。
 
-图片来源： dailyenergyinsider.com
+并且，文贵先生曾经在不久前的直播里说过，将会在盖特、甚至在其他媒体平台，对于灭共爆料革命战友们中好的主播，可以让平台上的用户明正言顺地对精彩的直播进行合法的打赏；更重要的是，我们有了自己的货币发行机构喜联储、自己的数字银行，让自己就是个正义的大金主，这让其他非法行为的“金”无用武之地……不胜枚举的措施还有很多，总之就是反用“金”的思路；
 
+2、首先在媒体平台上，我们逐步开展打赏功能，比如如果对有必要爆料的中共政要、特务、白手套们的真实黑料进行点播，点播时可以收费、打赏；而“黑料”持有人非但不必东躲西藏，还可以名正言顺地在媒体平台上合法赚钱。可以想见，老百姓对这类“花边”视频的点击率一定会呈几何级数的上升。“蓝”被逆用的思路将会多么有力！更好的思路就是，这样还可以在无形中监督“后中共国”的政客（甚至其他国家的政客）的非法行为。说到这，大家是不是觉得反用“蓝”的思路呼之欲出了？
 
-#### 编译：小红帽
+3、我们收购了世界上最著名的赌场全牌照，这是一家英国伦敦最古老的赌场；我认为这样也同时一举攻破了“金”里的洗钱和“黄”的威力：谁有这类需求，只要去咱们赌场消费即可，因为是合法所以没有必要偷偷摸摸； 即使战友们用这个场所“请客”，消费者也不会因为法律和道德败坏问题被威胁“绑架”。这是不是可以称之为反用“黄”？
 
-根据RT1月1日报道，**两家日本工业巨头正计划与比尔・盖茨的风险投资公司合作，为将在美国怀俄明州建造的一个高科技核反应堆提供技术支援。**
+二、反用商鞅五策：
 
-日本《读卖新闻》周六援引多位知情人士的话报道称，双方预计将在1月签署一项协议，由日本原子能机构（JAEA）和三菱重工提供工业援助和日本自己的先进反应堆的数据。
+1、“壹民”的“反义词”，大概是“多民”或者“壹官”；那“多民”作为逆向思考很好理解，即公民的思想可以百家争鸣，百花齐放，而且信仰自由。而“壹官”，就是必须坚持选举产生新政权，而且是一人一票选出的民主政权；
 
-盖茨建立的核电企业TerraPower计划最早于2028年在怀俄明州开设Natrium工厂，美国当局将提供资金以支付该项目的一半，估计为40亿美元。
+2、弱民的“反义词”，大概是“强民”或者“弱官”，强民包括为民开智，言论自由，公民有游行、结社的权利，有持枪权等；而“弱官”的思路就是通过互相制约的机制弱化政客特别是最高领导人的权力（类似美国）。
 
-一座使用钠作为冷却剂、输出功率为34.5万千瓦的快速反应堆，其建设工程将于2024年开始。
+3、“疲民”的“反义词”，大概是“养民”或“疲官”；其中“养民”就是给公民提供尽可能方便快捷的服务，废弃冗余的官僚体系和程序，让百姓生活轻松，心情愉悦；而“疲官”即让政客和政府部门通过接近疲于奔命的竞选才能获得执政机会；
 
-盖茨的风险公司最初计划与国有的中国核工业集团合作，但美国前总统唐纳德・特朗普推出的对与北京的核交易的限制迫使该公司放弃这一计划。美国与中国和俄罗斯的竞争由来已久，后者也在酝酿建造和出口先进反应堆的计划。
+4、“辱民”的“反义词”，大概是“尊民”或者“辱官”；其中“尊民”就是真正让中国人过有尊严的生活，包括讲究品质生活，用正版的软件，通过法律而不是非法手段解决问题……等等；而“辱官”的思路就是只要是纳税人，谁都可以批评政府和政客，督查他们的言行，最终达到政治清明；
 
-日本原子能机构拥有丰富的钠冷快堆运行经验，如福井县的文殊原型快堆和茨城县的常阳实验快堆，将多次向TerraPower提供运行数据和设计。
+5、“贫民”的反义词，大概是“富民”或者“贫官”；“富民”的思路就是让百姓富有，“仓廪实而知礼节”；“贫官”的思路不是让官员变得很穷，而是让官员无法像中共官员那样通过权力获得巨大利益。
 
-日本曾在2016年退役其文殊原型先进反应堆的痛苦经历，该项目耗资85亿美元，但收益甚微，而且多年来一直存在争议。文殊设施自成立以来就发生了事故、违反监管规定和掩盖事实。2011年福岛核灾难发生后，该反应堆被关闭。
+这些思路都是对中共国对外和对内的两个政治“杀手锏”的逆用，可谓针锋相对。当然我们也不能因此让自己变得教条。以上只是笔者认为可以提供的另一个角度和思路，最终落实到实施尚需决策者更加缜密的研究。
 
-新闻来源：[Japan to assist Bill Gates in building experimental nuclear reactor — RT Business News](https://www.rt.com/business/544950-japan-bill-gates-nuclear-reactor/)
+相关文章链接：
 
-***发布：小红帽***
+[绝招来自“杀手锏”的“反义词”——上篇](https://gnews.org/zh-hans/1789646/)
 
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-
+*发稿：mgjxs*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
