--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,19 +1,17 @@
 ---
-title: 共产党养成龙刘德华张学友王力宏这些巨人时一定留把柄
+title: 永远世界上绝大多数人就是身边守着宝，你不知道谁叫宝
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1814430/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1814553/)
 
-**郭文贵先生：**王力宏、任何一个歌星你查查出道的时候你就知道，在亚洲的所有里边，韩国一个帮，韩国就是四大家族，日本三大帮会，台湾、香港就三大黑帮。台湾的杨登魁，香港的两家，一个那个谁？那个林建岳，一个杨受成，再加上黑帮的那个谁，一下想不起来了，被我干灭那个，就这几个家族。
+**郭文贵先生：**这就是你们这一代孩子要记住，很多事情是要不一样的。如果你今天能告诉我说我记得郭叔uncle Miles，你是我第几个follow者，这个事情就不一样了。你去查去，我是正好你第100个关注者。在100之前，有一个第7个是我另外一个号的关注者，所以我是你的第七号和100号，而且我不是偶然的，就是上去点击，就是这样的。所以我记得很清楚，你去看去。这都是G-TV啊。所以说你看这跟你是有缘分。
 
-台湾里边出来的就是杨登魁，没有别人，是吧？王力宏是台湾黑帮弄出来的。台湾的黑帮到了香港找了谁呀？香港黑道那个向华强，向华强，当时，向氏兄弟，被我也干趴下那个，是吧？所有他们的经历都这样的，包括成龙都是被他们养起来的，成龙养不了他们，他是被养的，别看他……他啥都不是。
+然后呢，你爹，你爹就跟我的缘分就更深了，是吧。真是就是新西兰，你不知道新西兰有多重要，新西兰对我们有多重要。很多兄弟姐妹们，你们真的，永远世界上绝大多数人就是身边守着宝，你不知道谁叫宝。人类是非常无知的人类，你知道吗？就是上帝不知道怎么设计的人，就是你拥有最美好的时候，你永远不知道是最美好的，你老看着别人的好，别人的老公好，别人的老婆好，别人家的车比自己车好，别人家房子，比自己家房子好。而且身边最对你的应该记的，你没记住，不该记的什么谁骂过你，谁侮辱过你，你都记得门儿清。
 
-他为什么王力宏能火后来？从台湾杨登魁交给了大陆的安全部公安部，就是我的总裁林强培养起来的，公安部一局局长林强，我太了解了，王力宏所有的事情我太了解了。
+所以这个人类，它是很奇怪的，你知道吗？刚才回答小飞象、小飞侠，你们俩刚才说的话。今天看得出小飞象、小飞侠就在几个月和小王子和佳佳，这个暂时离开大使馆和办公室之后，就精神上的这种锻炼，真的已经完全不是一个人了。
 
-我今天对着直播说的，共产党现在要怎么他？共产党现在要杀富济贫，谁是有钱人？马云，有钱的网络商、地产商、金融大佬、演艺、歌星、网红，凡是超过千万收入的都在杀富范围之内，一个都跑不了。
+我说这话，我是不是跟你们发自内心的？你知道我从来不会浪费……就你们的脸部和表情、精神状态，你看我老拿着——黑小王子来开玩笑，但小王子的表情和他的最大的心理状态，他每次都能接招。
 
-共产党当年养活了他，培养了他，共产党的招儿是养你的时候一定要留把柄。那时候林强多牛你知道吗？像那个梅兰芳（口误，应该是梅艳芳）、成龙，香港的几个大歌星、明星到北京，什么香港的Twins，台湾的所有的歌星到北京去，都是在那卡拉OK那唱，一唱唱几天，他们从来不唱自己的歌，就Bunny唱他们的歌，他们从来不唱自己的，都唱别人的歌。刘德华呀，什么张学友，这些就别提了那就。生活中很无知，生活中很谦虚，更重要的事情，一点尊严、一点自由都没有。他在人前多风光，背后就有多少人踩在他脸上，因为越多人粉丝，他们这些人踩在脸上越有荣耀感。
-
-七哥那时候坐在那，一进去，“坐那，坐那儿，坐在那，先唱首，先唱两首！”，然后把酒搁这：“先喝几杯！这是谁，一会儿部长来了，部长要过来了啊”，一会儿什么什么来了，就你能看到港澳台的名歌星、老板在中国共产党面前真的是，我在你们面前你们都太小了，话不能说。
+你知道这个星球大战里最可怕的是什么你知道吗？就黑势力他能把那个好的势力东西都给你收过来，完了，黑势力赢了。正能量势力是因为爱，因为爱，最后打败都是打败了黑势力，是因为爱打破了黑势力。如果你有两样，我又有爱，我还能吸过……你所有的东西我都能吸过来的话，你就天下赢两次。就共产党的原话说，双赢，双赢是吧？赢两……连赢两次。
 
 字幕来源：[2021年12月25日文贵大直播圣诞特别节目“爆二代——希望与力量”全文字版（三）](https://gnews.org/zh-hans/1794181/)
 
