--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,79 +1,57 @@
 ---
-title: CCCA报告揭示辉瑞公司疫苗试验数据造假并会导致心肌炎
+title: 永远别从嘴里说出我害羞，不要失礼，永远不要失去自信
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1814379/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1814545/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/48D3633D-4ED8-4F2E-8628-BDB317D06625_w1023_r1_s17.jpg)图片来源：matejmo/Getty Images
-今天早些时候，《网关专家》(The Gateway Pundit)发表了一份由“加拿大新冠护理联盟”([Canadian COVID Care Alliance](https://www.thegatewaypundit.com/2021/12/must-watch-canadian-covid-care-alliance-explains-pfizer-shots-can-harm-good/))发布的一份证据确凿的报告，解释了为什么辉瑞疫苗对人们弊大于利。
+**郭文贵先生：**真是时代不一样了，我十四岁的时候正在追你七嫂如火如荼的时候，已经驾上摩托车、汽车，我已经是走向江湖吃百家饭，那时候我已经是这样了。
 
-你可以在这里阅读第一部分：证据确凿的报告：[加拿大新冠护理联盟解释为什么辉瑞疫苗弊大于利 (视频)](https://www.thegatewaypundit.com/2021/12/must-watch-canadian-covid-care-alliance-explains-pfizer-shots-can-harm-good/)
+但是这个时代让你们，你看看，你旁边的Twins还有钟仁、喜安娜、喜安迪、北极星你们这都是那么小的孩子，实际上在我们成长的年代，你们都是很大的孩子了，在那个时候，我们都已经真是江湖人物了己经，什么都独立了。
 
-加拿大新冠护理联盟(CCCA)由500多名独立的加拿大医生、科学家和卫生保健工作者组成，他们致力于向加拿大公众提供有关新冠病毒(COVID-19)的优质、平衡、基于证据的信息，以便减少住院，拯救生命，并使我们的国家尽快安全地恢复正常。
+但是由于这个时代的变化，让你们成熟得越来越晚。但是我特别想跟你Stephen说的，“我很害羞”，你没有害羞，你一定要记住，你一定回去把我今天说的话记住，你害羞是什么你知道？你不知道怎么表达，你不知道该怎么说出这个话。
 
-根据其网站，辉瑞公司6个月的数据显示，辉瑞公司的新冠病毒疫苗导致的疾病多于预防。另外，还概述了辉瑞公司的试验在设计和执行方面的缺陷。
+实际上你对你的现状和环境的陌生，就像你第一次吃某种水果的时候，你不会一口咬下去是吧？就像菠萝一口咬下去扎你舌头扎你嘴是吧？我第一次吃芒果就拿过来就放嘴里咬，哎哟，扎了我一嘴呀，这个不是这样吃的，扒皮。芒果不是整个吃的，一样，我不知道怎么吃，我就放在嘴里去了，这就是我们北方人不知道南方水果怎么吃一样。
 
-现在，让我们先来谈谈12至15岁青少年试验。根据他们深入分析的第24页，青少年接种疫苗确实是只有风险没有好处。青少年的新冠病毒死亡风险在统计上为零，患严重疾病的风险非常低。在试验中接种疫苗的孩子中，至少有一起严重的不良事件。
+你不叫害羞，不要随便定义害羞，你不是害羞的，更不能，男人不能有害怕。你现在在这里谁能怎么着你？你告诉我，Stephen，你长什么样、你说什么样、你做什么样的话跟这些人有关系吗？
 
-对青少年来说，接种疫苗真的是只有风险没有好处。该试验的动力严重不足。作为一项研究，这种微小的数据不会可靠地显示出不良事件的风险。接种组有1005人，其中0人对新冠病毒检测呈阳性，安慰剂组有978人，其中18人对新冠病毒检测呈阳性。
+**Stephen**：没有关系。
 
-因此，辉瑞公司声称这些是很好的结果，但由于青少年在统计上因新冠病毒而死亡的风险为零，患严重疾病的风险非常低。事实上，《纽约时报》在今年10月称，对于没有严重疾病的儿童来说，患严重的新冠病毒的危险非常低，以致于难以量化。
+**郭文贵先生**：这些人能决定你的未来吗？没有关系，对了。如果说不管你做什么说什么，谁能决定你的命运？只有你自己决定你的命运。所以我从小的时候，我就看任何人，我就想这人能决定我命运吗？他也不能决定我的命运，他未来会比我好吗？他永远不可能比我好，我一定比他好。所以在我心里就充满了一种叫什么？老人说是狂妄，还有再客观地说叫自信，我之中的自信就来了。
 
-接种疫苗对他们几乎没有好处，而且确实存在非常真实的不良事件的风险。然而，辉瑞公司对青少年研究实际上并不是为了发现不良事件，因为一个严重的不良事件，包括即使在800个孩子中发生的一个孩子的死亡，也可能不会出现在1005人的样本量中。但在这种情况下，危险信号确实出现了。在接种的青少年中，至少发生了一个严重的不良事件，她的名字叫麦迪·德·加雷(Maddie De Garay)。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/grafik-3.png)
-麦迪·德·加雷是一名12岁的试验参与者，她在接种第二剂疫苗后出现严重反应，并在24小时内被送入医院。她出现了胃轻瘫、恶心、呕吐、血压不稳、记忆力减退、脑雾、头痛、头晕、癫痫发作、语言和运动障碍、月经周期问题、腰部以下失去知觉、肠道和膀胱失控，而且她不得不插上喂食管，因为她失去了进食能力。
+今天放眼看来，在旁边这个框里面同心同框的人，谦虚的说你十四岁的优势，我已经输给了你三十六年、三十七年，咱俩不在一个起跑线上了。旁边的喜安娜也输给你好几年呀，钟仁也输你好几年呀，小飞象小飞侠已经输你一条街了是吧？小王子还叫小王子？他从明天起就改叫老王子了，是吧？还叫什么小王子在你面前。Twins跟你也差不多，是吧？
 
-从那时起，她多次住院，在过去的10个月里，她一直坐在轮椅上，通过管子进食。在他们提交给美国食品药品监督管理局(FDA)的报告中，辉瑞公司将她的伤害描述为功能性腹痛，这里有一个指向[FDA报告](https://www.fda.gov/media/148542/download)的链接（第30页）。这是逆天悖理的，这无疑带出其他不良事件有被压制或歪曲的可能性。
+但是你看看，你的未来是无限大、无穷无尽的大。所以说你这样的孩子，一定不要从你嘴里说出来“我害羞”，你可以说我不知道怎么表达，我不知道怎么说怎么讲，不要失礼，但是永远不要失去自己这份自信。世界上最讨厌的孩子就是什么？——失礼，就是你没有礼貌。你看我们的喜安迪、喜安娜姐妹俩礼貌到了最高级别，快跟日本人似的，一句话三鞠躬，非常之礼貌，是吧？
 
-**就5至11岁的辉瑞新冠病毒疫苗接种试验而言，加拿大新冠护理联盟表示，这种疫苗接种对他们的健康构成了不可接受的风险。甚至辉瑞公司也承认该疫苗会导致儿童心肌炎。**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/grafik-2.png)
-*就**5**至**11**岁的儿童而言，疫苗接种对他们的健康构成了不可接受的风险。在这个表格中，辉瑞公司使用预测模型，承认接种疫苗会导致儿童心肌炎。*
+但是呢我们不要失礼的同时不要失去自己的自信，你不是害羞，但你这种真诚是让我感动的，你就刚才上来的时候你很真诚，就这个力量已经是了不得了，基本上你要在一个男女社交当中，见面你就告诉大家“唉哟我害羞”，女孩儿都喜欢你。
 
-*请看红色栏，但他们乐观地声称，这种心肌炎的死亡人数将为零。请看黄色的那一列，这是他们的猜测，是预测模型的低级证据。但我们假设就说这是真的，不会有死亡。但让儿童患心肌炎还是没有道理的。首先，不伤害原则应该用在这里。但是政府现在已经将儿童接种这些疫苗后出现心脏问题的预期正常化了，以至于实际上，他们正在给生病的孩子发行关于如何处理这些问题的宣传册。*
+小王子这号人脸皮板砖厚，让你“哎，我是小王子啊！我是小王子啊！”这货吹牛的，女孩儿没有安全感，是吧？没有安全、对不对佳佳，我跟你说得对不对？是不是？你看看，你叫佳佳重新选择，一定选择你不选择小王子了，你放心Stephen，所以说你不要害羞，女孩儿都喜欢你这样的小孩儿，坦诚的男孩儿。开玩笑，我老黑小王子，小王子回去扎我的针儿，谢谢，谢谢！
 
-*对付他们的方法是不要给孩子们吃会伤害他们心脏的产品，因为心肌炎实际上是非常严重的。它会对心脏造成损害，而且是不可逆的。*
+字幕来源：[2021年12月25日文贵大直播圣诞特别节目“爆二代——希望与力量”全文字版（三）](https://gnews.org/zh-hans/1794181/)
 
-*因此，尽管辉瑞公司可能是正确的，他们的疫苗接种可能不会导致任何直接的死亡，但我们坚持认为，六年半的时间里有五分之一的死亡机会，这对儿童来说无疑是一种不可接受的风险。*
+编辑整理：喜马拉雅的肉夹馍；
 
-*但**FDA**表示，这对儿童来说是可以接受的风险。他们实际上已经放弃了首要不伤害原则。请记住，医疗干预措施在向人群推广之前应该被证明是安全的。然而，投票批准为**5**至**11**岁儿童接种疫苗的**FDA**咨询小组的**18**名成员之一埃里克·鲁宾**(Eric Rubin)**博士实际上持相反的观点，并暗示在人群中推广是测试不良事件的适当方式。*
+字幕文件制作：小满；
 
-*一家德国新闻网站实际汇总了过去五个月中超过**75**起已知的运动员倒地甚至死亡的案例。这些事件应该是罕见的，我们不能忽视它们不再是。*
+视频制作及上传：Cindy；
 
-**还记得当整个世界因为几个中共国人倒下的虚假视频而进入恐慌模式并封锁国门，但对二十多个运动员倒下的真实事例却没有任何反应。**
+G-News发布：小满；
 
-**辉瑞公司还在他们的报告中承认，他们的研究无法发现罕见的副作用，因为他们的长期免疫反应疗效和安全性数据是有限的。**
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
 
-*除了承认他们的接种会导致心肌炎外，辉瑞公司还在他们报告中直接承认，他们的长期免疫反应疗效和安全性数据是有限的，他们的研究没有能力去发现罕见的副作用。*
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
 
-*这也是事实，因为疫苗接种只在大约**1500**个孩子身上进行了测试，有多少家长知道？如果他们被告知这一点，有多少人会带他们的孩子去打这种疫苗？知情同意法说他们应该被告知，但这并没有发生。*
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
 
-*《英国医学杂志》**(The British Medical Journal)**是世界上最古老和最受尊敬的医学杂志之一，实际上已经指出了辉瑞公司在执行试验中的严重问题。**2021**年**11**月**2**日，他们发布了一篇关于他们对文塔维亚**(Ventavia)**公司的调查文章，文塔维亚**(Ventavia)**公司是辉瑞公司聘请来进行试验的研究公司之一。*
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
 
-*举报人是一位区域主管，她实际上向**FDA**举报她的公司为不致盲的参与者伪造数据，及没有对报告症状的参与者进行跟踪和测试，并对标本进行错误标记。其他几位员工也支持她的说法。尽管如此，辉瑞和**FDA**都没有对该研究公司进行审计或调查。辉瑞公司从未在其紧急使用授权申请中披露这些问题，事实上，辉瑞公司现在已经雇用了同一个研究公司文塔维亚**(Ventavia)**来进行另外四项新冠病毒试验。所以这一切都说明，我们在六个月的试验报告中看到的问题并不奇怪，而且在六个月的报告中，辉瑞公司实际上操纵了他们的疗效数据。*
+YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
 
-*他们从2020年7月开始的成人试验中提取结果，然后将12至15岁的试验结果混入其中，尽管青少年试验实际上在四个月后才开始。因此，众所周知，接种的疗效会随着时间的推移而减弱，这给疗效数字带来了虚假的提升。这两个队列的疗效应该单独报告，而不是作为一个综合结果呈现，但如果没有这种提升，他们的疗效数字可能会下降。*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/grafik-1.png)
-**你可以观看下面的详细介绍，以了解更多信息和一些令人震惊的披露。我们还列出了以下**[**PDF版本**](https://www.canadiancovidcarealliance.org/wp-content/uploads/2021/12/The-COVID-19-Inoculations-More-Harm-Than-Good-REV-Dec-16-2021.pdf)**的演示文稿。(如果你已经看过第一部分的视频，请跳到19:50）。**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/grafik.png)
-**简评：**
+G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
 
-加拿大新冠护理联盟(CCCA)发布的证据确凿的报告，解释了为什么辉瑞疫苗弊大于利。最重要的原因是辉瑞对其生产的中共病毒疫苗没有做足够的试验，所以没有足够的疗效数据支撑，同时他们还对已有的实验数据造假，并在没有确定该疫苗是否安全的情况下就在人群中广泛推广使用。
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
 
-美国食品药品监督管理局(FDA)对此没有尽到监管的责任，不仅没有披露疫苗严重的不良反应，甚至在11月份提交给美国地方法院的文件，要求联邦法官在55年后，即到2076再完全发布辉瑞公司提交给该政府机构、用来审批中共病毒疫苗的所有数据。辉瑞公司主动承认接种他们生产的中共病毒疫苗会导致心肌炎，这是辉瑞公司良心发现了吗？并非如此。这是因为因接种疫苗而引发的一桩桩青少年、运动员等心脏疾病突发事件不断被曝光，辉瑞公司知道他们的罪恶快要掩盖不住了。
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
 
-如今，因为政府机构和大药厂的狼狈为奸致使民众不能及时获得有关中共病毒疫苗的公正、透明且真实的信息，从而导致大量成人、青少年以及儿童都因接种疫苗而导致了不可逆转的疾病。独裁的政府机构和黑心的医药公司，最终将都逃不过法律的审判。
-
-新闻链接：[https://www.thegatewaypundit.com/2021/12/part-2-canada-covid-care-alliance-analysis-shows-pfizers-vaccination-kids-risk-no-benefit-pfizer-acknowledges-will-cause-myocarditis-children-video/](https://www.thegatewaypundit.com/2021/12/part-2-canada-covid-care-alliance-analysis-shows-pfizers-vaccination-kids-risk-no-benefit-pfizer-acknowledges-will-cause-myocarditis-children-video/)
-
-* * *
-
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
-
-
-编辑：【英国伦敦喜庄园编辑部】
-
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
