--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,46 +1,42 @@
 ---
-title: 美国机场继续陷入混乱，超过2600个航班被取消
+title: 德国95%以上Omicron变体报告病例是完全接种者
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1814584/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1814679/)
 
-#### 【雅典娜快讯】，紧贴时事脉搏
+编译： Jenny Ball
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Japan-to-assist-Bill-Gates-in-building-experimental-nuclear-reactor-1.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-61.png)图片来源 : thenationalpulse.com
 
+根据联邦政府的一份新报告，德国 95% 以上的 Omicron COVID-19 变体报告病例发生在完全接种疫苗的人中。
 
+这份由德国“罗伯特科赫研究所”于 12 月 30 日发表的论文，包括有关感染该病毒最新变体的 4,206 人的疫苗接种状况的信息。
 
-图片来源：thethaiger.com
+在研究中，报告的感染了 Omicron 的 420 人（相当于总病例的 95.6%），至少接种了两剂 COVID-19 疫苗。28% 的 Omicron 阳性组接受了第三剂或“加强”注射。
 
+在整个样本中，只有 186 名感染 Omicron 的人未接种疫苗，这表明接种疫苗的人感染 COVID-19 变体的可能性是其 21 倍以上。
 
-#### 编译：小红帽
+12 月 14 日，国家脉动（The National Pulse）[宣布全球 COVID-19 形势为“接种疫苗的大流行”](https://thenationalpulse.com/2021/12/14/a-pandemic-of-the-vaccinated/)。
 
-根据半岛电视台1月2日报道， **美国的航空旅行继续受到严重干扰，该国部分地区的恶劣天气加剧了由Omicron变种引发的新冠病毒（COVID-19）感染激增的影响。**
+罗伯特·科赫研究所的报告还记录了近 7,000 名 Omicron 检测呈阳性的人的症状，然而，大多数人几乎没有经历任何不良反应：
 
-根据追踪网站FlightAware的数据，美国周六时间下午4:30（格林尼治标准时间21:30）后，有2，604个航班被取消，占全球取消的4，529个航班的一半以上。
+“对于 6,788 例病例，提供了有关症状的信息，但大多数没有报告或症状轻微。124人住院，4人死亡。”
 
-在国际航空公司中，中国东方航空公司取消了500多个航班，约占其总数的四分之一；中国国际航空公司取消了200多个航班，占其时间表的五分之一。
+该数据似乎表明：疫苗对预防感染 Omicron 变种没有任何好处，但制药公司在美国的游说努力达到了创纪录的高水平，无论是在财务上还是在雇用人员方面。
 
-美国取消的航班是自圣诞节前夕航空公司开始宣布因机组人员感染新冠病毒而导致人员短缺以来最高的单日死亡人数。
+在对那些批评 COVID-19 疫苗副作用和不良反应的人进行严格审查的同时，国家脉动还披露，领先的制药巨头辉瑞公司与包括 Facebook 在内的社交媒体平台和路透社等媒体的利益冲突。
 
-根据该网站，受影响最严重的美国航空公司是西南航空公司，该公司不得不取消全国范围内的450个航班，占其航班计划的13%。
+该报告还跟踪了许多城市——包括纽约市和华盛顿特区——推出疫苗指令来防止 Omicron 变体的传播。尽管法院阻止了这项措施，拜登白宫也一直在寻求联邦疫苗的授权，并可能会提出要求所有乘坐国内飞机的旅客接种疫苗。
 
-美国航空和达美航空各取消了200多个航班，联合航空取消了150多个航班。奥黑尔机场有800多个航班被取消，中途岛机场有250多个航班被取消。
+**评论：静心思考，一方面是科学真实证据证明“疫苗对预防感染 Omicron 变种没有任何好处”；一方面是政府强制疫苗指令。之间有什么逻辑？逻辑是：制药公司在美国的游说努力达到了创纪录的高水平，无论是在财务上还是在雇用人员方面。逻辑是：领先的制药巨头辉瑞公司与包括 Facebook 在内的社交媒体平台和《路透社》等媒体的利益冲突。**
 
-自12月24日以来，已有超过12，000个美国航班被取消。
+新闻来源: [thenationalpulse.com] [over 95 percent of reported cases of the Omicron COVID-19 variant in Germany occurred in fully vaccinated individuals, according to a new report from the federal government.](https://thenationalpulse.com/2021/12/31/vaccinated-21-times-more-likely-to-get-omicron/)
 
-全球航空旅游业仍在为高度传染性的Omicron变种而影响。许多飞行员、空乘人员和其他工作人员在感染新冠病毒后缺勤，或在与感染者接触后被隔离。
+* * *
 
-新闻来源：[US airport chaos continues as more than 2,600 flights cancelled | Coronavirus pandemic News | Al Jazeera](https://www.aljazeera.com/news/2022/1/2/us-airport-chaos-continue-as-more-than-2600-flights-cancelled)
-
-***发布：小红帽***
-
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+*审核：文乐
+校对：阿伯塔
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-1.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
