--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,17 +1,21 @@
 ---
-title: 永远世界上绝大多数人就是身边守着宝，你不知道谁叫宝
+title: 阅尽人间繁华历尽世间万物永远无法与井底之蛙同日而语
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1814553/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1814646/)
 
-**郭文贵先生：**这就是你们这一代孩子要记住，很多事情是要不一样的。如果你今天能告诉我说我记得郭叔uncle Miles，你是我第几个follow者，这个事情就不一样了。你去查去，我是正好你第100个关注者。在100之前，有一个第7个是我另外一个号的关注者，所以我是你的第七号和100号，而且我不是偶然的，就是上去点击，就是这样的。所以我记得很清楚，你去看去。这都是G-TV啊。所以说你看这跟你是有缘分。
+**郭文贵先生：**当我去看某某某明星、某某大导的时候，坐在他办公室，我看着你们这，说我每天十几个小时在办公室。我已经20年了。你知道这种人我心里会说什么吗？这个货一辈子，他的世界就是一把椅子上，就这个二十几平方，你可以忘掉他了。我第一告诉我自己，我可以忘掉他了，我再多浪费1分钟不行，我找个时间是吧，不舒服，是吧，感冒咳嗽的，我就走人了，再也不想见到他。
 
-然后呢，你爹，你爹就跟我的缘分就更深了，是吧。真是就是新西兰，你不知道新西兰有多重要，新西兰对我们有多重要。很多兄弟姐妹们，你们真的，永远世界上绝大多数人就是身边守着宝，你不知道谁叫宝。人类是非常无知的人类，你知道吗？就是上帝不知道怎么设计的人，就是你拥有最美好的时候，你永远不知道是最美好的，你老看着别人的好，别人的老公好，别人的老婆好，别人家的车比自己车好，别人家房子，比自己家房子好。而且身边最对你的应该记的，你没记住，不该记的什么谁骂过你，谁侮辱过你，你都记得门儿清。
+这就像刚才咱们前几个战友问我的问题，一模一样的，当你把这个就刚才包括Bunny说我怎么社会社交，当你永远活在你这把椅子上，你的人生已经结束了。七哥，你们看到了我，小王子、佳佳、小飞象、小飞侠，刚才那个佳佳、小飞象说我在楼上当时喊他，我同时打电话同时说事我同时看到下边。我看到佳佳，我觉得看到战友们我喜欢，我要跟他打招呼，我在这看他们呢，是吧？我同时干好几件事情啊。你为什么要掩盖自己呢？你想一个导演，一个创作者，一生坐在一把椅子上，他叫什么？最简单的一句话，是不是，在屋里边造车嘛，闭门造车嘛，你怎么可能有前途呢？
 
-所以这个人类，它是很奇怪的，你知道吗？刚才回答小飞象、小飞侠，你们俩刚才说的话。今天看得出小飞象、小飞侠就在几个月和小王子和佳佳，这个暂时离开大使馆和办公室之后，就精神上的这种锻炼，真的已经完全不是一个人了。
+我一定要走出去。任何情况下，你看看所有外国人见我，“哎，你有时候你也出门嘛，你也进中央公园嘛”，你说我都哭笑不得，我想去哪去哪。我从爆料开始的时候，所有人就“别出门，别上凉台，别上街”。你问问我什么时候影响过我的行动自由过。人类最大，我是动物，我不动了，我只成物了，我没动了，我就已经不是个东西了，你知道吗？
 
-我说这话，我是不是跟你们发自内心的？你知道我从来不会浪费……就你们的脸部和表情、精神状态，你看我老拿着——黑小王子来开玩笑，但小王子的表情和他的最大的心理状态，他每次都能接招。
+我一定迈开我的腿，睁开我的眼，所以七哥在20岁左右已经把全世界走完了。所以什么人再跟我说话的时候，你知道我那种傲慢是骨子里边儿的。我越谦虚，实际上我有多傲慢。当你发现我对一个人特别谦虚的时候，你觉得你一定要相反的说，七哥已经很看不起他。为什么呀？我看完世界的时候我再跟那个中国连那个香港都没去过的人聊天儿，你说我能看得起他们吗？
 
-你知道这个星球大战里最可怕的是什么你知道吗？就黑势力他能把那个好的势力东西都给你收过来，完了，黑势力赢了。正能量势力是因为爱，因为爱，最后打败都是打败了黑势力，是因为爱打破了黑势力。如果你有两样，我又有爱，我还能吸过……你所有的东西我都能吸过来的话，你就天下赢两次。就共产党的原话说，双赢，双赢是吧？赢两……连赢两次。
+我去新西兰的时候还没Twins呢，是不是。我跟国内人谈新西兰那是哪年呢，是不是？八几年，雪冰兄还穿着……你爹，Twins，你那个雪冰爹还穿的豁裆裤呢。八几年我从新西兰回来，我告诉他，荷兰这个国家有多大，那有多漂亮。当时我在北京，在哈尔滨，你知道他们说我啥？他说，你是不是喝多了你，那是天堂也没有的地方。
+
+我从广州换车、换飞机，住在那个机场旁边一招待所，我跟招待所人拿出来，我说我在那儿买了一个荷兰的那个新西兰的那个毛衣啊。我说你看我在这买的毛衣，20美金，那时候好多好多钱呢，这样的毛衣漂亮。你知道人说什么？这什么破玩意儿，不就是那个叫什么那个那个炒房的江浙一带叫什么地方，原来生产这种毛衣的，不就那产的吗？义乌？不是义乌，还是另外一个，来做毛衣的地方最多的。
+
+所以，你知道遍游世界以后，你对这些人的看法你不一样，你站在高度的时候，当你的发现处理事情的时候，你记住，坐过飞机的人和一辈子坐牛车的人，想沟通很难。没出过那个村里的人，你给他讲城市和未来太空，你是有毛病。所以我做出一个很明智的选择，我选朋友很注意。
 
 字幕来源：[2021年12月25日文贵大直播圣诞特别节目“爆二代——希望与力量”全文字版（三）](https://gnews.org/zh-hans/1794181/)
 
