--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,23 +1,42 @@
 ---
-title: 中朝同意本月内恢复陆路贸易
+title: 女人爱英雄爱强人，女人不爱窝囊废、啰嗦鬼、LOSER
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1814593/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1814687/)
 
-撰稿：东京樱花团｜百花李香
-![](https://assets.gnews.org/wp-content/uploads/2022/01/pasted-image-0-1.png)[*图片来源*](https://www.yomiuri.co.jp/pluralphoto/20211231-OYT1I50113/)
-据《读卖新闻》1月1日消息，因中共病毒（新冠病毒或Covid-19），自2020年秋季起暂停的中（共）国和朝鲜的陆路贸易本月内将会恢复。金正恩政权在恢复与其它国家的贸易方面一直极为谨慎，可能是为了在2022年其祖父和父亲的生日之前确保供应。
+**郭文贵先生：**还有一个最重要的要想到，你生命中就24小时。你要给自己留够时间，不可动摇的，我的健身，是吧，我的吃饭，我自己打理卫生的时间，我绝对我都是同时干两三件事，但是这个时间是不能回旋的。像我在北京，我每天必陪我父母吃一顿饭，天塌下来我也得陪他们吃顿饭，我只要在北京，这是不可改变的。
 
-据消息人士透露，目前正在为1月份恢复陆路贸易做准备，根据中国和朝鲜之间的协议，他们计划通过中国辽宁省丹东市和河对岸的新义州之间的一条铁路线运送乳制品、药品和牙膏。之前两国已经在去年11月同意恢复陆路贸易，拖延的原因是朝鲜要求对其出口产品只要3天的消毒和检疫期，而中（共）国坚持要求14天的检疫期。为了给2月开幕的北京冬奥会做准备，中（共）国决心继续进行检疫，但是如何就消毒和检疫期限达成协议的尚不清楚。
+然后在这种情况下，小飞侠你要学到这个的时候，旁边的小飞象就会真的是爱你。为什么？一个女人爱着一个忙碌的男人，那是越爱越深。我和你七嫂最后建立了什么关系你知道吗？我在你七嫂子成了她真正的英雄。
 
-朝鲜正在准备两个重要的纪念活动，2月份是金正恩父亲金正日诞辰80周年，4月份是其祖父金日成诞辰110周年。
+你七嫂她很少夸人，但是很少夸人偶尔夸一句那也是很爽的，是吧？有时候你七嫂，“哎呀，文贵你就不是一般的人呐”，你看，我说“是吗”，看上去我很不在乎，实际我乐我一天甚至两天都不拉倒。女人爱英雄，女人爱强人。女人不会爱窝囊废、啰嗦鬼、LOSER，不可能！那这个女人旁边一定有他爱，她一定是骗你的，非常简单。所以说小飞侠，你的答案我给你了，你们每个人都要学。你们谁会管理这事情？谁会管理这事情？谁能做到这个事情？这就是重要了。
 
-根据中（共）国海关当局的贸易统计数据，去年前11个月，朝鲜从中国的进口总额约为2.25亿美元（约260亿日元），几乎是前年同期的一半。与2019年相比，降了90%。目前，一些货物是通过朝鲜西部的南浦海上从中国进口的，但迫切需要恢复运输成本较低的陆路贸易。
+字幕来源：[2021年12月25日文贵大直播圣诞特别节目“爆二代——希望与力量”全文字版（三）](https://gnews.org/zh-hans/1794181/)
 
-信息源：[**中国と北朝鮮、陸路貿易の月内再開で合意…重要行事控え正恩氏が物資確保か**](https://www.yomiuri.co.jp/world/20211231-OYT1T50215/#:~:text=%E5%9B)
+编辑整理：喜马拉雅的肉夹馍；
 
-*校对：东京樱花团/喜马拉雅的微尘*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+字幕文件制作：小满；
+
+视频制作及上传：Cindy；
+
+G-News发布：小满；
+
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
