--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,55 +1,45 @@
 ---
-title: 得罪彭丽媛和宋祖英被曾庆淮摆平的王力宏因曾庆淮被灭
+title: 美国机场继续陷入混乱，超过2600个航班被取消
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1814471/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1814584/)
 
-**郭文贵先生：**王力宏这人，王力宏他为啥那样变态你想过没有？你见演员界有多少人不染毒的？有多少人不参赌的？参赌是因为孤独寂寞、金钱的诱惑，还被这些黑道大佬给设置。涉毒的是寂寞孤独，完全是一个各种身体上虚像的一个表征，一个自杀行为。再往后的是，哪个最后的所谓的音乐人、演艺界不倒在金钱前面？
+#### 【雅典娜快讯】，紧贴时事脉搏
 
-根据这个结果，我今天告诉你，王力宏当年有一个最重要的事情，王力宏在大陆发展的时候得罪过两个人，这两个人他做梦没想到能决定他的命运。今天就是你们看到的我们的国母彭丽媛，你看看上网查查彭丽媛当时怎么和王力宏有过几个同场演唱？王力宏竟然拒唱过，因为国母；当年宋祖英他都不在乎，都发生过冲突。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Japan-to-assist-Bill-Gates-in-building-experimental-nuclear-reactor-1.jpg)
 
-你知道代替国母和宋祖英的是谁呀？你们知道是谁吗？后来是曾庆淮从中摆平，中国当时所有演艺界过去三十年谁说了算？曾庆淮。弄所有的歌星就是弄曾庆淮，就是弄曾庆红。共产党杀富济贫抢你的钱，同时灭掉政敌，这就叫共产党。
 
-曾庆淮会害死无数个明星。王力宏的背后，还有头一段抓起那个小孩叫什么玩意儿？强奸犯那个，都是曾庆淮的公司培养起来的。
 
-**佳佳：**吴亦凡。
+图片来源：thethaiger.com
 
-**郭文贵先生：**对对对，全都是。当时救刘晓庆的时候是老茂和曾庆淮救出来的，曾庆淮就撂一句话，你们都太小了，这话不能说，说完以后喜安娜、喜安迪、钟仁是不行的，少儿不宜，就不能说。
 
-我就在现场，你知道刘晓庆被接出来都成啥了刘晓庆？就专门有一个看刘晓庆的狱警虐待刘晓庆曾经写在海外一个网站叫留园网，在留园网上写，拍的那些照片，不堪入目，狱警就敢这么弄，你把她折腾成啥样？
+#### 编译：小红帽
 
-但是曾庆淮那句话具有典型的意义，王力宏是曾庆淮的人，是吧？现在要曾家所有的曾庆淮的演艺界通通都得灭，台湾的杨登奎黑道来投奔的是曾庆淮，通通都得灭。
+根据半岛电视台1月2日报道， **美国的航空旅行继续受到严重干扰，该国部分地区的恶劣天气加剧了由Omicron变种引发的新冠病毒（COVID-19）感染激增的影响。**
 
-网红是谁的事业呀？网红是孟建柱的事业，孙力军控制的，香港台湾黑道后来是孟建柱、孙力军控制的，孟建柱又是江家的人、曾家的人，都得灭。
+根据追踪网站FlightAware的数据，美国周六时间下午4:30（格林尼治标准时间21:30）后，有2，604个航班被取消，占全球取消的4，529个航班的一半以上。
 
-所以说你们看王力宏的时候，说实在话，王力宏没有任何错的，他哪错了我都不知道，他所有干的事情共产党干的都比他多一万倍，多一百倍都是善良的人了，演艺界没人不（这么）干。
+在国际航空公司中，中国东方航空公司取消了500多个航班，约占其总数的四分之一；中国国际航空公司取消了200多个航班，占其时间表的五分之一。
 
-字幕来源：[2021年12月25日文贵大直播圣诞特别节目“爆二代——希望与力量”全文字版（三）](https://gnews.org/zh-hans/1794181/)
+美国取消的航班是自圣诞节前夕航空公司开始宣布因机组人员感染新冠病毒而导致人员短缺以来最高的单日死亡人数。
 
-编辑整理：喜马拉雅的肉夹馍；
+根据该网站，受影响最严重的美国航空公司是西南航空公司，该公司不得不取消全国范围内的450个航班，占其航班计划的13%。
 
-字幕文件制作：小满；
+美国航空和达美航空各取消了200多个航班，联合航空取消了150多个航班。奥黑尔机场有800多个航班被取消，中途岛机场有250多个航班被取消。
 
-视频制作及上传：Cindy；
+自12月24日以来，已有超过12，000个美国航班被取消。
 
-G-News发布：小满；
+全球航空旅游业仍在为高度传染性的Omicron变种而影响。许多飞行员、空乘人员和其他工作人员在感染新冠病毒后缺勤，或在与感染者接触后被隔离。
 
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
+新闻来源：[US airport chaos continues as more than 2,600 flights cancelled | Coronavirus pandemic News | Al Jazeera](https://www.aljazeera.com/news/2022/1/2/us-airport-chaos-continue-as-more-than-2600-flights-cancelled)
 
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+***发布：小红帽***
 
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+**更多资讯，请关注：****
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
