--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,29 +1,47 @@
 ---
-title: 加州护士吹哨说接种者中患上心脏疾病和中风的数量惊人
+title: 管理人际关系是你最牛的，是打开成功之门的第一把钥匙
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1814444/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1814574/)
 
-#### 翻译/撰稿：zzballack
+**郭文贵先生：**刚才你看小飞侠你问我的问题，海量的信息我能处理，我骂王雁平最多的事情就两件事。她这个出口伤人，就是她那个嘴狠到……佛家里边最大的罪就是妄语，妄语中就是嘴伤人，你没办法，她就是……她就天生这个人，她就因为她这个嘴跟刀子一样，你们很多人都见过她，她现在是不可替代的作用。因为我这人永远，我是好人，当好人，当惯了，就说不出坏话了。所以她现在很有用，很有价值，但是对她不是好事。
 
-#### 校对：Chris
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-2-1.jpg)图片来源：每日邮报
-据《每日曝光》（Daily Expose）2021年12月31日报道，在南加州的医院，因新冠疫苗导致的病患人数越来越多。少数勇敢的护士挺身而出，讲述了他们所目睹的情况。
+第二个王雁平最大事情什么？说话开会时间太长。如果我在生活中不会管理我的时间，我将一事无成。管理自己成功的几个秘诀，管理自己的人事关系是你人生中第一把剑。你看，喜安娜、喜安迪，她刚才她姐妹两个就在……她妹妹11岁孩子，“是的——”，就是她俩的关系就一个主角，一个配角。你现在她俩调整过来年龄问题不现实。还有一个，她俩她爸她妈给她定好了角色。你看到钟仁，钟仁在短短的就这几个月的钟仁，就刚才能讲出这么精彩的话出来，是吧？中国在过圣诞节时候把圣诞老人给抓了，这话是多有力量这话。
 
-在位于洛杉矶北部的本图拉县 (Ventura County)，当地医院“不明原因”的心脏疾病、中风和血栓病例正在激增，但许多医生拒绝认为这些疾病与新冠疫苗有关。
+刚才呢，我们的蚂蚁仔的儿子Stephen刚说完“我害羞”，刚才“啪啪啪”就讲说我是最有意义的事，你看看这个人打开心扉以后。Twins在一年前,现在她坐这块的Twins，你看像不像那个印度最牛的那个音乐的那个女巫，最早那个女巫，你看她披着黑色的衣服，长发是吧？“哗”往那一……我当时我到我最喜欢就印度的妖乐、巫乐，我最喜欢的，就是那个印度的“喳——喳——”，然后石头“空空空”啊。然后呢人家那个女巫就像刚才叫Twins一样，穿着黑衣服长袍“咵”在那里，然后发出声音喊出来，哇，那个底气，就觉得她们那个丹田之气就没完没了，实际上是印度唱歌的叫呼吸，呼吸。
 
-在本图拉县一家重症监护室工作的护士萨姆（Sam）决定向媒体《Conejo Guardian》说出他对此事的担忧。他说：“我厌倦了所有正在发生的事，因为医疗机构继续拒绝承认新冠疫苗的弊远大于利。没有人对此提出质疑，这太疯狂了。在接种新冠疫苗后，患有严重健康问题的年轻人明显增多。已经有很多年轻人前来就诊，我们看到了很多中风和心脏病患者。在一个案例中，一名38岁妇女的大脑出现了闭塞，血液流动受阻。我们知道新冠疫苗会导致血栓，她接种了两剂疫苗，但没有任何医生将其中风症状与疫苗联系起来！他们只说这症状无法解释，这真的很荒唐！另一个例子中，一位以前没有心脏病史的63岁妇女突然患上了心脏病。检测显示她的冠状动脉是清晰的，然而她刚刚接种了莫德纳的新冠疫苗。一位医生实际上对新冠疫苗提出了质疑，但他们没有在病历中提及这一点，因为无法证明。”
+刚才你发现Rica唱歌牛在哪儿了吗？Rica没有呼吸的节气，就没断气。哇Rica厉害啊Rica。你看看Rica了吗？她真的厉害呀。在印度的最高境界就是人家印度唱的歌，不管是现在的，“当当当”，它这个气你就不带缓的。
 
-萨姆补充说，该地区所有的医院都目睹了心肌炎病例的大幅飙升。新冠疫苗的副作用包括心肌炎，这一点已广为人知并被广泛报道。“但是每个人都想淡化这一问题，医生们不愿意质疑它和对此发出警告，甚至不愿讨论它，他们表现得好像无法找到病症原因，认为其是自发的。”
+你看今天的Twins的音乐已经到了……今天编的歌和她俩的表情，这是绝对的音乐的范儿，音乐的范儿，绝对是音乐的范儿。所以，但是呢，你人与人之间，你看，我过去的一年，小飞侠，你看我管理的多少人事关系，我每一个人我都记得，我每个人的关系我都记得。今天，北极星虽然中文表达不清楚，这让我很不悦悦，你英文竟然比我好，你还不学郭氏英文，这不对的，你要学郭氏英文，要中英文都听得懂不用翻译的英文叫郭氏英文啊。
 
-另一位在重症监护室工作的护士达娜（Dana）说：“我所在单位从未如此繁忙，但没有一个病人是新冠患者。我们通常不会看到同时出现这么多的中风、动脉瘤（aneurysms）和心脏病患者。一般情况下，我们每年会看到六到十个急性主动脉夹层 (aortic dissection）病例，但在上个月我们就看到了六个，这很疯狂。这些疾病的死亡率非常高。”
+所以说，你一定要记住，就像今天咱们这些，说实话我都能记得很清楚。打游戏的，是吧，我们的喜安娜家人，你看每个人我都能记住。管理人际关系是你最牛的，打开你成功的门的第一把钥匙。小飞侠你是绝对缺失这堂课的，你不善与人沟通，你不善与人打开心扉。同样的是，别人也不会跟你沟通、打开心扉。
 
-与萨姆的医院一样，达纳所在医院的医生们甚至不会考虑新冠疫苗导致了心脏相关疾病患者突然增加。相反，这些“卫生专家”将其归咎于“假期”等因素。
+字幕来源：[2021年12月25日文贵大直播圣诞特别节目“爆二代——希望与力量”全文字版（三）](https://gnews.org/zh-hans/1794181/)
 
-护士们说，这些病人中的大多数已完全接种了新冠疫苗。
+编辑整理：喜马拉雅的肉夹馍；
 
-新闻来源：
+字幕文件制作：小满；
 
-[Nurses Blow Whistle on Staggering Number of Heart Problems and Strokes in The Fully Vaccinated](https://dailyexpose.uk/2021/12/31/nurses-blow-whistle-on-staggering-number-of-heart-problems-and-strokes-in-the-fully-vaccinated/)
+视频制作及上传：Cindy；
+
+G-News发布：小满；
+
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
