--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,29 +1,26 @@
 ---
-title: 健身 健心 控欲
+title: 美国日感染中共病毒变体奥米炕病例即将达到高峰
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1814354/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1814529/)
 
-**作者：Ray裁决**
-[![](https://express.adobe.com/page/d3iXKYrdVDifR/images/be7bcb23-bc0f-4c4a-ba68-15ad4a43c281.jpg?asset_id=f636b9d8-3f69-41ac-9fc6-ad7e34e20915&amp;img_etag=%2217596dde3f43fcfd8ad12cf201596645%22&amp;size=1024)](https://express.adobe.com/page/d3iXKYrdVDifR/images/be7bcb23-bc0f-4c4a-ba68-15ad4a43c281.jpg?asset_id=f636b9d8-3f69-41ac-9fc6-ad7e34e20915&amp;img_etag=%2217596dde3f43fcfd8ad12cf201596645%22&amp;size=1024)
-“亲爱的战友们，今天你们健身了吗？”
+#### 撰稿：彩虹
 
-伴随着熟悉的话语、熟悉的场景，经历了四年多风风雨雨的“北美健身教练”从一个中年“油腻大叔”变成了目光坚毅，一身正气的战神。每天用自己的汗水重塑自己的身体，还曾被伪类欺民贼们说成拿水泼自己，这种滑稽可笑的谎话说出来连他们自己都不信。这些伪类欺民贼们自己做不到，就说别人是表演的心态都是在中共体制下培养出来的极度变态心理。
+#### 校对：Chris
+![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-5.jpg)图片来源：BBC
+1月1日，《新闻极限》报道，哥伦比亚大学研究人员估计，到1月9日，美国的中共病毒（COVID-19）变体奥米炕（Omicron）病例将可能达到高峰，介于周感染250万至540万例之间。
 
-健身运动本身就是一个违反人类本能的一项运动。人类的本能是储存脂肪，再在人体需要能量的时候释放能量。随着现代人类生活水平的提高，物质的供应充足，人类在身体中囤积脂肪变得十分容易，因此现代人普遍体脂率都高于正常范围内。要把脂肪人为地消耗掉，降低身体的体脂率并不容易，我们的身体本能是在抵抗的，身体会分泌相应的激素来抵抗；同样，增长肌肉是需要做抗阻运动撕裂肌肉，补充营养再合成肌肉，做肌肥大的训练，对于这些行为，人体自身都会做出本能的抵抗。所以健身是对自我的一个挑战，长期健身是对自我意志的长期磨练。
+领导哥伦比亚大学建模工作的流行病学家杰弗里·沙曼（Jeffrey Shaman）告诉《纽约时报》说：“这非常令人震惊和不安，我们正看到前所未有的COVID-19（中共病毒）感染病例的发生。”
 
-孤独、汗水、钢铁般的意志、时间观念、作息规律、坚持自律、控制饮食，这些都是健身者必须经历的，而这些也是对一个人最好的磨练，从身体上，更从心理上。所以健身往往和健心相伴，更多的是控制自己的欲望。郭文贵先生用自己的行动为我们诠释着这一切。
+上个月，华盛顿大学的一个研究小组的另一个建模研究估计，美国的奥米炕病例将在1月底达到高峰，但该模型的研究人员认为该中共病毒变体的快速传播可能导致感染高峰在1月中旬之前到来。
 
-爆料革命四年多来，其实是对追求正道主义的新中国联邦人身体和心灵的磨练。各种魑魅魍魉出来作妖进进出出，能留下来的都是真正有信仰的人。去往喜马拉雅的路上是一路的崎岖坎坷，强健的身体和坚强的意志是通过这条道路的必备条件，在今后的道路上真战友们一定要背靠背走下去，一起健身健心。
-[![](https://express.adobe.com/page/d3iXKYrdVDifR/images/6e3025d5-649a-4b69-84ff-d9d89add79a0.jpg?asset_id=1052ff7c-3550-4973-86d0-390385a9798b&amp;img_etag=%22f42de443baf95eb62a5d15fa1adb7cf5%22&amp;size=3769)](https://express.adobe.com/page/d3iXKYrdVDifR/images/6e3025d5-649a-4b69-84ff-d9d89add79a0.jpg?asset_id=1052ff7c-3550-4973-86d0-390385a9798b&amp;img_etag=%22f42de443baf95eb62a5d15fa1adb7cf5%22&amp;size=1024)
-*编辑：【英国伦敦喜庄园编辑部】*
+而哈佛大学陈曾熙公共卫生学院（Harvard TH Chan School of Public Health）的流行病学家威廉·汉纳奇（William Hanage）则评论说，感染奥米炕的病例增长数量如此之快，已经没有必要通过建模来预测了解医院的情况。他认为“医院资源紧张，我们没有那么多闲置能力，当然，奥米炕令这种情况更加糟糕”。
 
-*校对：文明明 | 审核：仙女儿-文善 | Page: Daoiii*
+埃默里大学（Emory University）流行病学家娜塔莉·迪恩（Natalie Dean）认为，在纽约这样的大城市，随着中共病毒感染完能够感染的人，新的感染病例将下降更快。
 
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/gQcCnsACar)
+**新闻来源：**
 
-[![](https://express.adobe.com/page/d3iXKYrdVDifR/images/449b12ae-6540-4009-897c-e9abd9c7e608.jpg?asset_id=4b1282a3-d306-4f0d-8c07-e0b7d9a22d80&amp;img_etag=%22a8bb00791f167c919a809dcf9f5fb58b%22&amp;size=1024)](https://express.adobe.com/page/d3iXKYrdVDifR/images/449b12ae-6540-4009-897c-e9abd9c7e608.jpg?asset_id=4b1282a3-d306-4f0d-8c07-e0b7d9a22d80&amp;img_etag=%22a8bb00791f167c919a809dcf9f5fb58b%22&amp;size=1024)
+[Study Predicts Omicron Peaks Jan. 9](https://www.newsmax.com/us/omicron-covid-pandemic-coronavirus/2022/01/01/id/1050664/)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
