--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,43 +1,42 @@
 ---
-title: 俄罗斯囤积黄金和外汇，新兴市场引领黄金购买热潮
+title: 日本将协助比尔・盖茨在美国建造实验性核反应堆
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1814290/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1814438/)
 
-#### 【雅典娜快讯】紧贴时代脉搏
+#### 【雅典娜快讯】，紧贴时事脉搏
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/54721.jpg)图片来源：Comos Chronicle
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/Japan-to-assist-Bill-Gates-in-building-experimental-nuclear-reactor.jpg)
 
 
-#### 整理报道：文泓
 
-据《RT新闻》报道，俄罗斯央行最新数据显示，截至12月24日当周，俄罗斯外汇持有量增长0.7%，达到6305亿美元。目前俄罗斯是世界第五大外汇储备国。
-俄罗斯的国际储备是由货币黄金、外币和特别提款权组成的高流动性外国资产，由俄罗斯中央银行和政府支配。
-2015年，在2014年石油价格危机期间，政府不得不花费约2,500亿美元来救助经济后，外汇储备降至2008年后的低点3,560亿美元。
+图片来源： dailyenergyinsider.com
 
-从那时起，俄罗斯的黄金和外汇持有量几乎翻了一番。它们超过了监管机构在2019年6月设定的5000亿美元的目标水平，此后一直保持在该门槛之上。
 
-2020年，尽管冠状病毒大流行对经济产生了影响，迫使政府增加支出以支持企业和家庭，但其外汇持有量仍增加了7.5%至5,958亿美元。
-仅上个月，外汇储备就达到了6263亿美元的历史新高，每周增长41亿美元。
+#### 编译：小红帽
 
-同期，全球各国央行外汇储备中的黄金持有量一直在增加，2021年创下31年来的新高。与此同时，美元持有量却一直在下降。
-根据世界黄金协会的数据，在过去十年中，银行的黄金库存增加了4,500多吨。截至9月，储量总计约36,000吨，是1990年以来的最大数量，比十年前增加了15%。
-与此同时，美元在外汇储备中的占比在过去十年急剧下降。2020年，美元兑各国货币比率跌至25年来的最低水平。
+根据RT1月1日报道，**两家日本工业巨头正计划与比尔・盖茨的风险投资公司合作，为将在美国怀俄明州建造的一个高科技核反应堆提供技术支援。**
 
-分析师表示，各国央行，尤其是新兴经济体的央行正在继续转向黄金，反映出全球对以美元为基础的货币制度的担忧。2021年前9个月，泰国购买了约90吨、印度70吨和巴西60吨黄金。
-2008年全球金融危机后，各国央行和公共机构开始增持黄金，导致美国国债资金外流，导致美元资产贬值。
-截至12月30日，黄金价格保持坚挺，交易价格为每金衡盎司1,806美元。
+日本《读卖新闻》周六援引多位知情人士的话报道称，双方预计将在1月签署一项协议，由日本原子能机构（JAEA）和三菱重工提供工业援助和日本自己的先进反应堆的数据。
 
-新闻链接：
-1、[Russia keeps stockpiling gold & foreign currency — RT Business News](https://www.rt.com/business/544829-russia-foreign-reserves-surge/)
-2、[Countries accelerate shift away from US dollar — RT Business News](https://www.rt.com/business/544825-dump-dollar-gold/)
+盖茨建立的核电企业TerraPower计划最早于2028年在怀俄明州开设Natrium工厂，美国当局将提供资金以支付该项目的一半，估计为40亿美元。
 
-发布：文泓
-更多资讯，请关注：**
+一座使用钠作为冷却剂、输出功率为34.5万千瓦的快速反应堆，其建设工程将于2024年开始。
+
+盖茨的风险公司最初计划与国有的中国核工业集团合作，但美国前总统唐纳德・特朗普推出的对与北京的核交易的限制迫使该公司放弃这一计划。美国与中国和俄罗斯的竞争由来已久，后者也在酝酿建造和出口先进反应堆的计划。
+
+日本原子能机构拥有丰富的钠冷快堆运行经验，如福井县的文殊原型快堆和茨城县的常阳实验快堆，将多次向TerraPower提供运行数据和设计。
+
+日本曾在2016年退役其文殊原型先进反应堆的痛苦经历，该项目耗资85亿美元，但收益甚微，而且多年来一直存在争议。文殊设施自成立以来就发生了事故、违反监管规定和掩盖事实。2011年福岛核灾难发生后，该反应堆被关闭。
+
+新闻来源：[Japan to assist Bill Gates in building experimental nuclear reactor — RT Business News](https://www.rt.com/business/544950-japan-bill-gates-nuclear-reactor/)
+
+***发布：小红帽***
+
+**更多资讯，请关注：
 **[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
 [澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
 [澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/Nz26pG64XF)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
 
  
 
