--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,23 +1,42 @@
 ---
-title: 2021年澳洲股市总结
+title: 对于生命中的人际关系清单每天都要做减法而不是做加法
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1814582/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1814670/)
 
-撰稿：云彩
+**郭文贵先生：**再告诉你，我绝不会在我的生命的我的时间单上有浪费我时间的人。小飞侠，你的狐朋狗友也好，还是你是良友益师也好，有多少你自己知道。有些人是需要必须忘记的，他不应该出现在你生活，就要把他忘记了。
 
-视频来自网络
-澳洲ASX 200 的年收益 是14%，没有华尔街那么强劲——道琼斯指数（上涨 19%）、标准普尔 500 指数（上涨 27%）和纳斯达克指数（上涨 22%），也没有德国 DAX 指数上涨 15.6%和 MSCI 世界指数上涨 20.6%那么耀眼。
+你看我和发小跟我那么好，是友情，但是我跟他不会做任何事情。我不会坐在那跟他聊几个小时，因为我说话他听不懂。需要钱，我给你，需要帮忙，我帮。
 
-但是在亚太地区，澳洲的股指还是远高于其他同行。其中包括日本的日经指数（上涨 5.3%）、上证综合指数（上涨 3.6%）、新西兰的 NZX 50（下跌 1.2%）和香港的恒生指数（下跌 15%）。
+就像我哥哥、我嫂子回家，我绝不会在家呆2个小时。我哥给我讲述他在报纸上看到的新闻，还有什么明星的绯闻，是吧？你说我听他干什么？你说你跟他吵架去？不可能。所以告诉你，再一个秘诀，把你生命中的人的关系清单，每天都要做减法，而不是做加法。你就这么这几样，人际关系、时间关系、选择朋友。
 
-根据 Refinitiv 的数据发现 ASX 200 在以下行业实现了增长：
+字幕来源：[2021年12月25日文贵大直播圣诞特别节目“爆二代——希望与力量”全文字版（三）](https://gnews.org/zh-hans/1794181/)
 
-电信 (+ 29.4%)，非必需消费品 (+ 23.2%)，金融 (+ 21.8%)，房地产 (+ 20.5%)，工业 (+ 11.6%)，医疗保健 (+ 8.9%)，消费必需品 (+ 8.1%)，材料 (+ 6.8%)，公用事业 (+ 4.9%)，能源 (- 1%)，科技 (-2%)
+编辑整理：喜马拉雅的肉夹馍；
 
-点评：股市的上涨跟每个国家超发货币有关。笔者查看电信公司Telstra的财经数据。在截止2021年6月30日的财年里，Telstra 的总收入下降了 11.6%至231亿澳元；息税折旧摊销前利润下降了14.2%至76亿澳元。虽然税后净利润达到19亿澳元，较去年同期增长3.4%。Telstra 实施了4.9亿澳元的基本固定成本削减。
+字幕文件制作：小满；
 
-由此可见，实际上Telstra的业务是不容乐观的。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/澳喜图标2-1.jpg)
+视频制作及上传：Cindy；
+
+G-News发布：小满；
+
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
