--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,48 +1,24 @@
 ---
-title: 管理人际关系是你最牛的，是打开成功之门的第一把钥匙
+title: 浅谈三只松鼠聘用“眯眯眼”模特被指辱华
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1814574/)
+`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/1814668/)
 
-**郭文贵先生：**刚才你看小飞侠你问我的问题，海量的信息我能处理，我骂王雁平最多的事情就两件事。她这个出口伤人，就是她那个嘴狠到……佛家里边最大的罪就是妄语，妄语中就是嘴伤人，你没办法，她就是……她就天生这个人，她就因为她这个嘴跟刀子一样，你们很多人都见过她，她现在是不可替代的作用。因为我这人永远，我是好人，当好人，当惯了，就说不出坏话了。所以她现在很有用，很有价值，但是对她不是好事。
+撰稿：美好时光
+![](https://assets.gnews.org/wp-content/uploads/2022/01/202.jpg)图片来自网络
+三只松鼠股份有限公司是中国第一家定位于纯互联网食品品牌的企业，也是当前中国销售规模最大的食品电商企业。近日，部分网友声称两年前其宣传海报眯眯眼有丑化国人和辱华倾向。对此，我极为反对甚至极度不理解。
 
-第二个王雁平最大事情什么？说话开会时间太长。如果我在生活中不会管理我的时间，我将一事无成。管理自己成功的几个秘诀，管理自己的人事关系是你人生中第一把剑。你看，喜安娜、喜安迪，她刚才她姐妹两个就在……她妹妹11岁孩子，“是的——”，就是她俩的关系就一个主角，一个配角。你现在她俩调整过来年龄问题不现实。还有一个，她俩她爸她妈给她定好了角色。你看到钟仁，钟仁在短短的就这几个月的钟仁，就刚才能讲出这么精彩的话出来，是吧？中国在过圣诞节时候把圣诞老人给抓了，这话是多有力量这话。
+作为两年前宣传海报被翻出来说辱华，难道这些人不好好生活就爱闹事吗？作为商家，主要目的就是盈利，这一点是值得肯定的。为了盈利将大量资金用于营销与宣传，做到短时间成为知名品牌是值得国内许多企业学习的。既然盈利为目的，海报设计自然以吸引消费者购买以及吸引眼球为基础，牵强到丑化和辱华，这么做对商家毫无利益且不值一提。
 
-刚才呢，我们的蚂蚁仔的儿子Stephen刚说完“我害羞”，刚才“啪啪啪”就讲说我是最有意义的事，你看看这个人打开心扉以后。Twins在一年前,现在她坐这块的Twins，你看像不像那个印度最牛的那个音乐的那个女巫，最早那个女巫，你看她披着黑色的衣服，长发是吧？“哗”往那一……我当时我到我最喜欢就印度的妖乐、巫乐，我最喜欢的，就是那个印度的“喳——喳——”，然后石头“空空空”啊。然后呢人家那个女巫就像刚才叫Twins一样，穿着黑衣服长袍“咵”在那里，然后发出声音喊出来，哇，那个底气，就觉得她们那个丹田之气就没完没了，实际上是印度唱歌的叫呼吸，呼吸。
+本身来讲宣传海报形象设计就是一个商家主观性创造，模特职业性遵从，受众主观性购买的行为活动。抛弃人与人平等角度谈起，就是一千个读者就有一千个哈姆雷特。我就认为海报设计特立独行，标新立异，主观创新以及大胆尝试，这种出发点是偏激网民做任何事情都需要学习的；人物形象集思广益，个性鲜明，世俗自信以及魅力传达，这种观测点是网络暴力人群在打榜大眼睛网红后需要深刻反省的。
 
-刚才你发现Rica唱歌牛在哪儿了吗？Rica没有呼吸的节气，就没断气。哇Rica厉害啊Rica。你看看Rica了吗？她真的厉害呀。在印度的最高境界就是人家印度唱的歌，不管是现在的，“当当当”，它这个气你就不带缓的。
+如果商家个性化创造，模特眼睛小都要被网友抨击，那么只会导致企业创新创造流失，更伤了众多小眼睛普通人群的心，失了企业和小家，谈何什么爱国？当网友对眯眯眼事件热议的时候，不如花更多时间思考网络暴力和键盘侠何去何从吧，真正的自由和民主是建立在对公共领域舆论开放创造亮绿灯，对偏激暴力空谈爱国开红灯。
 
-你看今天的Twins的音乐已经到了……今天编的歌和她俩的表情，这是绝对的音乐的范儿，音乐的范儿，绝对是音乐的范儿。所以，但是呢，你人与人之间，你看，我过去的一年，小飞侠，你看我管理的多少人事关系，我每一个人我都记得，我每个人的关系我都记得。今天，北极星虽然中文表达不清楚，这让我很不悦悦，你英文竟然比我好，你还不学郭氏英文，这不对的，你要学郭氏英文，要中英文都听得懂不用翻译的英文叫郭氏英文啊。
+要知道，风清气正的网络空间绝对不是偏激网友娱乐至死的盛宴，盲目对商业设计公然叫板，不如好好反省清理行动什么时候清理一下丑化网民和反商倾向的这些网友；盲目地扣丑化国人和辱华倾向帽子的网友，不如吃点三只松鼠的核桃，补补愚蠢的脑子后想想什么叫食品质量。
 
-所以说，你一定要记住，就像今天咱们这些，说实话我都能记得很清楚。打游戏的，是吧，我们的喜安娜家人，你看每个人我都能记住。管理人际关系是你最牛的，打开你成功的门的第一把钥匙。小飞侠你是绝对缺失这堂课的，你不善与人沟通，你不善与人打开心扉。同样的是，别人也不会跟你沟通、打开心扉。
+参考链接：[香港01](https://www.hk01.com/%E5%8D%B3%E6%99%82%E4%B8%AD%E5%9C%8B/716947/%E7%9E%87%E7%9E%87%E7%9C%BC%E8%A2%AB%E6%8C%87%E8%BE%B1%E8%8F%AF%E9%81%AD%E7%B6%B2%E6%9A%B4-%E4%B8%89%E9%9A%BB%E6%9D%BE%E9%BC%A0-%E6%A8%A1%E7%89%B9-%E7%9C%BC%E7%9D%9B%E5%B0%8F%E4%B8%8D%E9%85%8D%E5%81%9A%E4%B8%AD%E5%9C%8B%E4%BA%BA)
 
-字幕来源：[2021年12月25日文贵大直播圣诞特别节目“爆二代——希望与力量”全文字版（三）](https://gnews.org/zh-hans/1794181/)
-
-编辑整理：喜马拉雅的肉夹馍；
-
-字幕文件制作：小满；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
-
+*发稿：mgjxs*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
