--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,29 +1,19 @@
 ---
-title: 永远别从嘴里说出我害羞，不要失礼，永远不要失去自信
+title: 与人打交道最核心的东西是要取舍，今日事一定要今日毕
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1814545/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1814633/)
 
-**郭文贵先生：**真是时代不一样了，我十四岁的时候正在追你七嫂如火如荼的时候，已经驾上摩托车、汽车，我已经是走向江湖吃百家饭，那时候我已经是这样了。
+**郭文贵先生：**第三个是管什么？一定要记住，任何情况下你都要取舍。你要听老班长，Twins他爹，你给我要给我跟我说要求是吧？这俩闺女最有感觉了，我相信这俩闺女被他爹已经虐得半死不活的了是吧？你那个爹就是个娘，就不是爹，Twins你知道吧？我说你爹就是长着全身都是女人的基因，是吧。欸，我就能让他这个女人的爹，比谁说话都简单。老班……你们村长，长岛哥说话，那你要跟他聊起来，他跟你啰嗦起来没完没了，但是我就能让他把话说得最简单，而且他能找到他自己。
 
-但是这个时代让你们，你看看，你旁边的Twins还有钟仁、喜安娜、喜安迪、北极星你们这都是那么小的孩子，实际上在我们成长的年代，你们都是很大的孩子了，在那个时候，我们都已经真是江湖人物了己经，什么都独立了。
+我们的所有大事我跟雪冰兄几乎没超过30秒过，长岛哥我们几乎都二三十秒。为什么？越简单他越记得住。还有跟人打交道，一个最核心的东西，就是你一定要学会知道什么人要取舍。因为老班长说的话，对你来讲，你就是取和舍。你说老班长这个不行，这个行，你就说了就完了，你不能像他对待俩Twins似的。欸，你俩给我坐这儿，我要跟你讲课，讲3小时，估计俩闺女都睡了好几觉了是吧？你都写好首歌出来了，是不是，根本没对错了。那么你这样的话，取舍完以后你的效率就高。
 
-但是由于这个时代的变化，让你们成熟得越来越晚。但是我特别想跟你Stephen说的，“我很害羞”，你没有害羞，你一定要记住，你一定回去把我今天说的话记住，你害羞是什么你知道？你不知道怎么表达，你不知道该怎么说出这个话。
+你就像那个盖特、还有这喜联储，我跟他说事情的时候，我真的是，我每次王雁平和William这些人开会，你就基本上你就是能连开28小时都不拉倒了，是吧？我把我话说完，我起来就走。小王子在办公室看到我跟谁开会，我都是掐好时间不差两分钟我上洗手间，上了回来再说会，说完就拉倒。
 
-实际上你对你的现状和环境的陌生，就像你第一次吃某种水果的时候，你不会一口咬下去是吧？就像菠萝一口咬下去扎你舌头扎你嘴是吧？我第一次吃芒果就拿过来就放嘴里咬，哎哟，扎了我一嘴呀，这个不是这样吃的，扒皮。芒果不是整个吃的，一样，我不知道怎么吃，我就放在嘴里去了，这就是我们北方人不知道南方水果怎么吃一样。
+那么你这个东西，你取舍完了以后最后一招是什么？你一定要有，学会思考，睡觉前，我从小我感谢我爹娘，我感谢我的那些比我年龄大的人。睡觉前我一定要反思我今天我哪说错了话了。有时候一想，自己一激灵得后脑勺发凉，“扑楞”一下从床上下来，拿纸记下来。
 
-你不叫害羞，不要随便定义害羞，你不是害羞的，更不能，男人不能有害怕。你现在在这里谁能怎么着你？你告诉我，Stephen，你长什么样、你说什么样、你做什么样的话跟这些人有关系吗？
+想想我今天，我们必须要想明天要干的事儿啊。再好的脑子不如个烂笔头，我要写一写，划拉划拉。我写的字一般人都不认识，你知道吗，我自己有时第二天也不认识，但是我也能猜半天，我也能认出来是吧。所以说也没什么泄密的，我就基本上能划拉划拉明天必须要干的事儿。
 
-**Stephen**：没有关系。
-
-**郭文贵先生**：这些人能决定你的未来吗？没有关系，对了。如果说不管你做什么说什么，谁能决定你的命运？只有你自己决定你的命运。所以我从小的时候，我就看任何人，我就想这人能决定我命运吗？他也不能决定我的命运，他未来会比我好吗？他永远不可能比我好，我一定比他好。所以在我心里就充满了一种叫什么？老人说是狂妄，还有再客观地说叫自信，我之中的自信就来了。
-
-今天放眼看来，在旁边这个框里面同心同框的人，谦虚的说你十四岁的优势，我已经输给了你三十六年、三十七年，咱俩不在一个起跑线上了。旁边的喜安娜也输给你好几年呀，钟仁也输你好几年呀，小飞象小飞侠已经输你一条街了是吧？小王子还叫小王子？他从明天起就改叫老王子了，是吧？还叫什么小王子在你面前。Twins跟你也差不多，是吧？
-
-但是你看看，你的未来是无限大、无穷无尽的大。所以说你这样的孩子，一定不要从你嘴里说出来“我害羞”，你可以说我不知道怎么表达，我不知道怎么说怎么讲，不要失礼，但是永远不要失去自己这份自信。世界上最讨厌的孩子就是什么？——失礼，就是你没有礼貌。你看我们的喜安迪、喜安娜姐妹俩礼貌到了最高级别，快跟日本人似的，一句话三鞠躬，非常之礼貌，是吧？
-
-但是呢我们不要失礼的同时不要失去自己的自信，你不是害羞，但你这种真诚是让我感动的，你就刚才上来的时候你很真诚，就这个力量已经是了不得了，基本上你要在一个男女社交当中，见面你就告诉大家“唉哟我害羞”，女孩儿都喜欢你。
-
-小王子这号人脸皮板砖厚，让你“哎，我是小王子啊！我是小王子啊！”这货吹牛的，女孩儿没有安全感，是吧？没有安全、对不对佳佳，我跟你说得对不对？是不是？你看看，你叫佳佳重新选择，一定选择你不选择小王子了，你放心Stephen，所以说你不要害羞，女孩儿都喜欢你这样的小孩儿，坦诚的男孩儿。开玩笑，我老黑小王子，小王子回去扎我的针儿，谢谢，谢谢！
+还有一个，今天必须要说的话，我一定跟他说了。我再半夜，我要找他们所有人，这个是什么什么的事，把话也说了，绝不能憋着，能不过夜的千万不要过夜。不过夜的事情一定不能过夜，不过天的绝对不能过天，给自己设下几个原则。
 
 字幕来源：[2021年12月25日文贵大直播圣诞特别节目“爆二代——希望与力量”全文字版（三）](https://gnews.org/zh-hans/1794181/)
 
